change race titles and dates for 2021

--- a/en/about.html
+++ b/en/about.html
@@ -2,114 +2,112 @@
 <html lang="en">
 
 <head>
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-157606098-2"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag() { dataLayer.push(arguments); }
-		gtag('js', new Date());
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157606098-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-		gtag('config', 'UA-157606098-2');
-	</script>
+    gtag('config', 'UA-157606098-2');
+  </script>
 
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<meta name="keywords" content="trail, running, treh, vrhov, slovenija, sabotin, skabrijel, sveta gora">
-	<meta name="description"
-		content="Tek treh vrhov 2020 | 12km, 28km, 58km | trail running over three summits surrounding the valley of Soča river in the Western Slovenia, 10th October 2020">
-	<title>Tek treh vrhov | About</title>
-	<!--Styles-->
-	<link rel="stylesheet" href="/styles/main.css">
-	<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
-	<link href="https://fonts.googleapis.com/css?family=Roboto:300&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Martel+Sans:800&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="keywords" content="trail, running, treh, vrhov, slovenija, sabotin, skabrijel, sveta gora">
+  <meta name="description"
+    content="Go4trail 2021 | 12km, 28km, 58km | trail running over three summits surrounding the valley of Soča river in the Western Slovenia, 20. 11. 2021">
+  <title>Go4trail | About</title>
+  <!--Styles-->
+  <link rel="stylesheet" href="/styles/main.css">
+  <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Martel+Sans:800&display=swap" rel="stylesheet">
 
 </head>
 
 <body>
-	<!--Navigation bar-->
-	<header id="navigation-bar">
-		<div class="home-container">
-			<a href="/en" id="logo">T3V</a>
-		</div>
-		<div class="menu-icon-container">
-			<button class="menu-icon" data-target="menu">
-				<i class="fas fa-bars" id="menu-button"></i>
-			</button>
-		</div>
-		<!--Menu content-->
-		<div id="menu">
-			<a id="close-button">&times;</a>
-			<ul class="menu-content">
-				<li><a href="faq" class="menu-link">FAQ</a></li>
-				<li><a href="races" class="menu-link" id="races-button">Races</a></li>
-				<li><a href="https://sportotime.com/eng/event/1171" target="_blank" rel="noopener noreferrer"
-						class="menu-link">Registration</a></li>
-				<li><a href="about" class="menu-link">About</a></li>
-				<li><a href="contact-us" class="menu-link">Contact</a></li>
-				<li>
-					<a href="/sl/o-nas" class="language-switch menu-link">SI</a>
-					<span>/</span>					
-					<a href="/it/chi-siamo" class="language-switch menu-link">IT</a>
-				</li>
-			</ul>
-		</div>
-	</header>
+  <!--Navigation bar-->
+  <header id="navigation-bar">
+    <div class="home-container">
+      <a href="/en" id="logo">Go4trail</a>
+    </div>
+    <div class="menu-icon-container">
+      <button class="menu-icon" data-target="menu">
+        <i class="fas fa-bars" id="menu-button"></i>
+      </button>
+    </div>
+    <!--Menu content-->
+    <div id="menu">
+      <a id="close-button">&times;</a>
+      <ul class="menu-content">
+        <li><a href="faq" class="menu-link">FAQ</a></li>
+        <li><a href="races" class="menu-link" id="races-button">Races</a></li>
+        <li><a href="https://sportotime.com/eng/event/1171" target="_blank" rel="noopener noreferrer"
+            class="menu-link">Registration</a></li>
+        <li><a href="about" class="menu-link">About</a></li>
+        <li><a href="contact-us" class="menu-link">Contact</a></li>
+        <li>
+          <a href="/sl/o-nas" class="language-switch menu-link">SI</a>
+          <span>/</span>
+          <a href="/it/chi-siamo" class="language-switch menu-link">IT</a>
+        </li>
+      </ul>
+    </div>
+  </header>
 
-	<div class="flex-box">
-		<!--Showcase image-->
-		<section>
-			<div class="showcase-image">
-				<img src="../assets/images/showcase-9-m.jpg" 
-					srcset="../assets/images/showcase-9-m.jpg 650w,
-					../assets/images/showcase-9.jpg 750w"
-					sizes="100vw"
-					alt="Tek treh vrhov - About us">
-				<div class="text-wrap grid">
-					<span class="showcase-title content-wrap">
-						About
-					</span>
-				</div>
-			</div>
-		</section>
-		<!--section-D-->
-		<section class="section-d grid flex-item">
-			<div class="content-wrap">
-				<p class="main-text pt-1">Tek treh vrhov (T3V) started as all good things do. With a group of friends doing
-					together what they like the most. We love to run. Especially when the trail goes uphill. That is why
-					we decided to bring you a unique running experience. From the picturesque ridge of Mt. Sabotin and
-					forest paths on Mt. Škabrijel to the cavern of Sveta Gora and stunning views of the Soča river. We
-					wanted to capture the diversity that our homeground has to offer. And what better way to experience
-					it than by going on a journey across three summits.</p>
-			</div>
-		</section>
+  <div class="flex-box">
+    <!--Showcase image-->
+    <section>
+      <div class="showcase-image">
+        <img src="../assets/images/showcase-9-m.jpg"
+          srcset="../assets/images/showcase-9-m.jpg 650w, ../assets/images/showcase-9.jpg 750w" sizes="100vw"
+          alt="Go4trail - About us">
+        <div class="text-wrap grid">
+          <span class="showcase-title content-wrap">
+            About
+          </span>
+        </div>
+      </div>
+    </section>
+    <!--section-D-->
+    <section class="section-d grid flex-item">
+      <div class="content-wrap">
+        <p class="main-text pt-1">Go4trail started as all good things do. With a group of friends doing
+          together what they like the most. We love to run. Especially when the trail goes uphill. That is why
+          we decided to bring you a unique running experience. From the picturesque ridge of Mt. Sabotin and
+          forest paths on Mt. Škabrijel to the cavern of Sveta Gora and stunning views of the Soča river. We
+          wanted to capture the diversity that our homeground has to offer. And what better way to experience
+          it than by going on a journey across three summits.</p>
+      </div>
+    </section>
 
-		<!--section-C-->
-		<section class="section-c" class="grid">
-			<div class="content-wrap">
-				<div class="icon-container">
-					<a href="https://www.instagram.com/go4trail/" target="_blank" rel="noopener noreferrer" class="icon"
-						data-target="menu">
-						<i class="fab fa-instagram"></i></a>
-					<a href="https://www.facebook.com/trail3v.eu/" target="_blank" class="icon" data-target="menu">
-						<i class="fab fa-facebook-square"></i></a>
-				</div>
-			</div>
+    <!--section-C-->
+    <section class="section-c" class="grid">
+      <div class="content-wrap">
+        <div class="icon-container">
+          <a href="https://www.instagram.com/go4trail/" target="_blank" rel="noopener noreferrer" class="icon"
+            data-target="menu">
+            <i class="fab fa-instagram"></i></a>
+          <a href="https://www.facebook.com/trail3v.eu/" target="_blank" class="icon" data-target="menu">
+            <i class="fab fa-facebook-square"></i></a>
+        </div>
+      </div>
 
-		</section>
+    </section>
 
-		<!--Footer-->
-		<footer id="main-footer" class="grid">
-			<div>Tek treh vrhov | by <a href="https://teowinkler.com" target="_blank" rel="noopener noreferrer">Teo
-					Winkler</a></div>
-		</footer>
-	</div>
+    <!--Footer-->
+    <footer id="main-footer" class="grid">
+      <div>Go4trail | by <a href="https://teowinkler.com" target="_blank" rel="noopener noreferrer">Teo
+          Winkler</a></div>
+    </footer>
+  </div>
 
-	<!--Scripts-->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
-	<script type="text/javascript" src="/src/js/mainScript.js"></script>
+  <!--Scripts-->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
+  <script type="text/javascript" src="/js/app.js"></script>
 </body>
 
 </html>
