--- a/en/contact-us.html
+++ b/en/contact-us.html
@@ -17,8 +17,8 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<meta name="keywords" content="trail, running, treh, vrhov, slovenija, sabotin, skabrijel, sveta gora">
 	<meta name="description"
-		content="Tek treh vrhov 2020 | 12km, 28km, 58km | trail running over three summits surrounding the valley of Soča river in the Western Slovenia, 10th October 2020">
-	<title>Tek treh vrhov | Contact Us</title>
+		content="Go4trail 2021 | 12km, 28km, 58km | trail running over three summits surrounding the valley of Soča river in the Western Slovenia, 20. 11. 2021">
+	<title>Go4trail | Contact Us</title>
 	<!--Styles-->
 	<link rel="stylesheet" href="/styles/main.css">
 	<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
@@ -32,7 +32,7 @@
 	<!--Navigation bar-->
 	<header id="navigation-bar">
 		<div class="home-container">
-			<a href="/en" id="logo">T3V</a>
+			<a href="/en" id="logo">Go4trail</a>
 		</div>
 		<div class="menu-icon-container">
 			<button class="menu-icon" data-target="menu">
@@ -66,7 +66,7 @@
 					srcset="../assets/images/showcase-4-m.jpg 650w,
 					../assets/images/showcase-4.jpg 750w"
 					sizes="100vw"
-					alt="Tek treh vrhov - Contact us">
+					alt="Go4trail - Contact us">
 				<div class="text-wrap grid">
 					<span class="showcase-title content-wrap">
 						Contact us
@@ -97,7 +97,7 @@
 				<i class="fab fa-facebook-square"></i></a>
 		</div>
 		<footer id="main-footer" class="grid flex-footer">
-			<div>Tek treh vrhov | by <a href="https://teowinkler.com" target="_blank" rel="noopener noreferrer">Teo
+			<div>Go4trail | by <a href="https://teowinkler.com" target="_blank" rel="noopener noreferrer">Teo
 					Winkler</a></div>
 		</footer>
 	</div>
@@ -105,7 +105,7 @@
 	<!--Scripts-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
 	<script type="text/javascript" src="/src/js/jquery.validate.js"></script>
-	<script type="text/javascript" src="/src/js/mainScript.js"></script>
+  <script type="text/javascript" src="/js/app.js"></script>
 	<script type="text/javascript" src="/src/js/formValidation.js"></script>
 
 </body>
