--- a/en/faq.html
+++ b/en/faq.html
@@ -17,8 +17,8 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<meta name="keywords" content="trail, running, treh, vrhov, slovenija, sabotin, skabrijel, sveta gora">
 	<meta name="description"
-		content="Tek treh vrhov 2020 | 12km, 28km, 58km | trail running over three summits surrounding the valley of Soča river in the Western Slovenia, 10th October 2020">
-	<title>Tek treh vrhov | FAQ</title>
+		content="Go4trail 2021 | 12km, 28km, 58km | trail running over three summits surrounding the valley of Soča river in the Western Slovenia, 20. 11. 2021">
+	<title>Go4trail | FAQ</title>
 	<!--Styles-->
 	<link rel="stylesheet" href="/styles/main.css">
 	<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
@@ -31,7 +31,7 @@
 	<!--Navigation bar-->
 	<header id="navigation-bar">
 		<div class="home-container">
-			<a href="/en" id="logo">T3V</a>
+			<a href="/en" id="logo">Go4trail</a>
 		</div>
 		<div class="menu-icon-container">
 			<button class="menu-icon" data-target="menu">
@@ -65,7 +65,7 @@
 					srcset="../assets/images/showcase-3-m.jpg 650w,
 					../assets/images/showcase-3.jpg 750w"
 					sizes="100vw"
-					alt="Tek treh vrhov - FAQ"
+					alt="Go4trail - FAQ"
 					class="image-center">
 				<div class="text-wrap grid">
 					<span class="showcase-title content-wrap">
@@ -82,8 +82,8 @@
 						<a class="toggle" href="javascript:void(0);">Where will the races start?</a>
 						<ul class="inner  top-padding">
 							<li>
-								<p>Go1V, Go3V and Počasna a drzna ultra will start at Solkan Kayak Center. Start of the
-									Gorica run will be on Bevk Square in Nova Gorica. </p>
+								<p>GOTRIM, GO3V and GOULTRA will start at Solkan Kayak Center. Start of the
+									Goriški tek will be on Bevk Square in Nova Gorica. </p>
 							</li>
 						</ul>
 					</li>
@@ -91,9 +91,9 @@
 					<li>
 						<a class="toggle" href="javascript:void(0);">When will the races start?</a>
 						<ul class="inner  top-padding">
-							<p>Gorica run will take place on 3th October at 10.00 am. The majority of races (Go1V, Go3V
-								and Počasna a drzna ultra) will take place on 10th October at 7.00 am (Počasna a drzna
-								ultra), 9.00 am (Go3V) and 9.30 (Go1V). </p>
+							<p>Goriški tek will take place on 3th October at 10.00 am. The majority of races (GOTRIM, GO3V
+								and GOULTRA) will take place on 10th October at 7.00 am (Počasna a drzna
+								ultra), 9.00 am (GO3V) and 9.30 (GOTRIM). </p>
 						</ul>
 					</li>
 					<li>
@@ -124,9 +124,9 @@
 						</ul>
 					</li>
 					<li>
-						<a class="toggle" href="javascript:void(0);">Who organises Tek treh vrhov?</a>
+						<a class="toggle" href="javascript:void(0);">Who organises Go4trail?</a>
 						<ul class="inner  top-padding">
-							<p> Tek treh vrhov is organised by <a href="https://www.sz-ng.si" target="_blank"
+							<p> Go4trail is organised by <a href="https://www.sz-ng.si" target="_blank"
 									rel="noopener noreferrer">Javni zavod za šport Nova Gorica</a>, Bazoviška 4, 5000
 								Nova Gorica.
 							</p>
@@ -169,14 +169,14 @@
 
 		<!--Footer-->
 		<footer id="main-footer" class="grid">
-			<div>Tek treh vrhov | by <a href="https://teowinkler.com" target="_blank" rel="noopener noreferrer">Teo
+			<div>Go4trail | by <a href="https://teowinkler.com" target="_blank" rel="noopener noreferrer">Teo
 					Winkler</a></div>
 		</footer>
 	</div>
 
 	<!--Scripts-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
-	<script type="text/javascript" src="/src/js/mainScript.js"></script>
+  <script type="text/javascript" src="/js/app.js"></script>
 </body>
 
 </html>
