--- a/en/races/goriski-tek.html
+++ b/en/races/goriski-tek.html
@@ -17,8 +17,8 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<meta name="keywords" content="trail, running, treh, vrhov, slovenija, sabotin, skabrijel, sveta gora">
 	<meta name="description"
-		content="Tek treh vrhov 2020 | 12km, 28km, 58km | trail running over three summits surrounding the valley of Soča river in the Western Slovenia, 10th October 2020">
-	<title>Tek treh vrhov | Gorica Run</title>
+		content="Go4trail 2021 | 12km, 28km, 58km | trail running over three summits surrounding the valley of Soča river in the Western Slovenia, 20. 11. 2021">
+	<title>Go4trail | Goriški tek</title>
 	<!--Styles-->
 	<link rel="stylesheet" href="/styles/main.css">
 	<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
@@ -31,7 +31,7 @@
 	<!--Navigation bar-->
 	<header id="navigation-bar">
 		<div class="home-container">
-			<a href="/en" id="logo">T3V</a>
+			<a href="/en" id="logo">Go4trail</a>
 		</div>
 		<div class="menu-icon-container">
 			<button class="menu-icon" data-target="menu">
@@ -62,11 +62,11 @@
 		<section>
 			<div class="showcase-image">
 				<img src="../../assets/images/goriski-tek-m.jpg" 
-					alt="Tek treh vrhov - Gorica Run and Walk for Hope"
+					alt="Go4trail - Goriški tek and Walk for Hope"
 					class="image-top">
 				<div class="text-wrap grid">
 					<span class="showcase-title content-wrap">
-						8th Gorica Run and Walk for Hope
+						8th Goriški tek and Walk for Hope
 					</span>
 				</div>
 			</div>
@@ -135,14 +135,14 @@
 
 		<!--Footer-->
 		<footer id="main-footer" class="grid">
-			<div>Tek treh vrhov | by <a href="https://teowinkler.com" target="_blank" rel="noopener noreferrer">Teo
+			<div>Go4trail | by <a href="https://teowinkler.com" target="_blank" rel="noopener noreferrer">Teo
 					Winkler</a></div>
 		</footer>
 	</div>
 
 	<!--Scripts-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
-	<script type="text/javascript" src="/src/js/mainScript.js"></script>
+  <script type="text/javascript" src="/js/app.js"></script>
 </body>
 
 </html>
