--- a/it/gare/goultra-58km.html
+++ b/it/gare/goultra-58km.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -17,56 +17,56 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="keywords" content="trail, running, treh, vrhov, slovenija, sabotin, skabrijel, sveta gora">
   <meta name="description"
-    content="Go4trail 2021 | 12km, 28km, 58km | trail running over three summits surrounding the valley of Soča river in the Western Slovenia2020. 11. 2021
-  <title>Go4trail | GO3V 28km</title>
+    content="Go4trail 2021 | 12km, 28km, 58km | trail running over three summits surrounding the valley of Soča river in the Western Slovenia, 20. 11. 2021
+  <title>Go4trail | GOULTRA 58km</title>
   <!--Styles-->
   <link rel="stylesheet" href="/styles/main.css">
   <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Martel+Sans:800&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
   <!--Navigation bar-->
   <header id="navigation-bar">
     <div class="home-container">
-      <a href="/en" id="logo">Go4trail</a>
-    </div>
+      <a href="/it" id="logo">Go4trail</a> </div>
     <div class="menu-icon-container">
       <button class="menu-icon" data-target="menu">
         <i class="fas fa-bars" id="menu-button"></i>
       </button>
     </div>
-
-
     <!--Menu content-->
     <div id="menu">
       <a id="close-button">&times;</a>
       <ul class="menu-content">
-        <li><a href="/en/faq" class="menu-link">FAQ</a></li>
-        <li><a href="/en/races" class="menu-link" id="races-button">Races</a></li>
-        <li><a href="https://sportotime.com/eng/event/1171" target="_blank" rel="noopener noreferrer"
-            class="menu-link">Registration</a></li>
-        <li><a href="/en/about" class="menu-link">About</a></li>
-        <li><a href="/en/contact-us" class="menu-link">Contact</a></li>
+        <li><a href="/it/informazioni" class="menu-link">Info</a></li>
+        <li><a href="/it/gare" class="menu-link" id="races-button">Gare</a></li>
+        <li><a href="https://sportotime.com/ita/evento/1171" target="_blank" rel="noopener noreferrer"
+            class="menu-link">Iscrizioni</a></li>
+        <li><a href="/it/chi-siamo" class="menu-link">Chi siamo</a></li>
+        <li><a href="/it/contatti" class="menu-link">Contatti</a></li>
         <li>
-          <a href="/sl/proge/go3v-28km" class="language-switch menu-link">SI</a>
+          <a href="/sl/proge/goultra-58km" class="language-switch menu-link">SI</a>
           <span>/</span>
-          <a href="/it/gare/go3v-28km" class="language-switch menu-link">IT</a>
+          <a href="/en/races/goultra-58km" class="language-switch menu-link">EN</a>
         </li>
       </ul>
     </div>
   </header>
+
   <div class="flex-box">
     <!--Showcase image-->
     <section>
       <div class="showcase-image">
-        <img src="../../assets/images/showcase-10-m.jpg" srcset="../../assets/images/showcase-10-m.jpg 650w,
-				../../assets/images/showcase-10.jpg 750w" sizes="100vw" alt="Go4trail - GO3V 28km" class="image-center">
+        <img src="../../assets/images/showcase-12-m.jpg"
+          srcset="../../assets/images/showcase-12-m.jpg 650w, ../../assets/images/showcase-12.jpg 750w" sizes="100vw"
+          alt="Go4trail - GOULTRA 58 km" class="image-center">
         <div class="text-wrap grid">
           <span class="showcase-title content-wrap">
-            GO3V - 28 km
+            GOULTRA - 58 km
           </span>
         </div>
       </div>
@@ -74,60 +74,71 @@
     <!--section-D-->
     <section class="section-d grid flex-item">
       <div class="content-wrap">
-        <p class="opening">A race for running enthusiasts looking for a challenge. GO3V trail will lead you over
-          the summit of Mt. Škabrijel and through the cavern of Sveta Gora. Finally, you will take a raft over
-          the Soča river and reach the ridge of Mt. Sabotin.</p>
-
-        <ul class="info-container">
-          <li>Distance: <b>28 km</b></li>
-          <li>Elevation: <b>1675 m</b></li>
-          <li>Refreshment stations: <b>6</b></li>
-          <li>Date: <b>20. 11. 2021</b></li>
-          <li>Start: <b>9.00</b>, <i>Solkan Kayak Center</i></li>
-        </ul>
-
-        <p class="20. 11. 2021
-          Download <a href="/assets/gpx/GO3V_28km.gpx.zip">GPX 28 km</a>
+        <p class="opening">La nostra prova più dura ti condurrà attraverso Il monte San Gabriele e Monte Santo fino a
+          Kanal, da dove si salirà sul monte Korada, da lì poi si arriverà sul Sabotino e quindi all’arrivo a Salcano.
         </p>
 
-        <h2>Time limit</h2>
-        <ul class="equipment">
-          <li><b>13.00</b> Solkan Kayak Center (16km / 4 hours)</li>
-          <li><b>16.00</b> Finish line (7 hours)</li>
+        <ul class="info-container">
+          <li>Distanza: <b>58 km</b></li>
+          <li>Dislivello: <b>2864 m</b></li>
+          <li>Ristori: <b>6</b></li>
+          <li>Stazioni di acqua: <b>3</b></li>
+          <li>Data della gara: <b>20. 11. 2021></li>
+          <li>Start: <b>7.00</b>, <i>Centro Kayak Solkan (Salcano)</i></li>
         </ul>
 
-        <h2>Obligatory equipment</h2>
-        <ul class="equipment">
-          <li>1. Race number (fully visible)</li>
-          <li>2. Water bottle (camel bag, bottle, soft flask etc.)</li>
-          <li>3. Eko cup (refreshment stations don't serve plastic cups)</li>
-          <li>4. Mobile phone (silent mode)</li>
-          <li>5. Emergency blanket</li>
-          <li>6. First aid kit</li>
-          <li>7. Wind jacket</li>
-          <li>8. Headlamp</li>
-          <li class="small-text">* Additional gear might be announced on our Facebook few days before the
-            event.</li>
-        </ul>
+        <p class="top-padding">
+          Download <a href="/assets/gpx/Ultra_58km.gpx.zip">GPX 58 km</a>
+        </p>
 
-        <h2>Recommended equipment</h2>
+        <h2>Cancelli orari</h2>
         <ul class="equipment">
-          <li>1. Trekking poles</li>
-          <li>2. Energy gels (marked with runner's race number)</li>
-        </ul>
-
-        <h2>Entry fee</h2>
-        <ul class="price">
-          <li>until 1st July 2020: <b>20 €</b></li>
-          <li>until 30th September 2020: <b>29 €</b></li>
-          <li>until the day of the event: <b>45 €</b></li>
-          <li class="small-text">* If registrations are not filled up you can register on the day of the
-            event. In this case we cannot guarantee you will receive a gift pack.
+          <li><b>13.30</b> Kanal (30km / 6 hours 30 minuti)</li>
+          <li><b>17.00</b> Vrhovlje (45km / 10 ore) - dopo le 17 il sentiero di cresta verso il Sabotino viene chiuso e
+            i concorrenti possono continuare lungo la "tangenziale". Al traguardo, tutti i concorrenti che sono stati
+            deviati lungo la tangenziale saranno classificati dietro a quelli che hanno percorso il sentiero di cresta
+            verso il Sabotino. </li>
+          <li><b>19.00</b> Fine gara (58 km / 12 ore)</li>
+          <li class="small-text">* In caso di maltempo e condizioni pericolose per i concorrenti, l'organizzazione si
+            riserva la facoltà di deviare la gara lungo la "tangenziale" verso il Sabotino, evitando così la cresta di
+            Sabotino.
           </li>
         </ul>
+
+        <h2>Materiale obbligatorio</h2>
+        <ul class="equipment">
+          <li>1. Race number (fully visible)</li>
+          <li>2. Serbatoio d'acqua(camel bag, bottle, soft flask itd.)</li>
+          <li>3. Ecotazza o recipiente per bere (bicchieri non sono presenti ai ristori)</li>
+          <li>4. Telefono cellulare</li>
+          <li>5. Coperta termica (foglio isotermico di emergenza)</li>
+          <li>6. Kit di pronto soccorso</li>
+          <li>7. Giacca antivento</li>
+          <li>8. Pila frontale o torcia con batterie cariche</li>
+          <li class="small-text">* Vi invitiamo a seguire la pagina <a href="https://www.facebook.com/trail3v.eu/"
+              target="_blank" rel="noopener noreferrer">Facebook</a> per gli aggiornamenti meteo prima della gara, in
+            quanto potrebbero essere fortemente consigliati pantaloni lunghi, giacca in goretex e guanti.
+          </li>
+        </ul>
+
+        <h2>Materiale consigliato</h2>
+        <ul class="equipment">
+          <li>1. Bastoncini</li>
+          <li>2. Barrete e gel (su cui dovrà essere scritto il numero del pettorale)</li>
+        </ul>
+
+        <h2>Quote di iscrizione</h2>
+        <ul class="price">
+          <li>fino 1 luglio 2020: <b>40 €</b></li>
+          <li>fino 30th settembre 2020: <b>49 €</b></li>
+          <li>fino al giorno della gara: <b>65 €</b></li>
+          <li class="small-text">* In caso di posti liberi, sarà possibile registrarsi il giorno dell'evento, ma in
+            questo caso non possiamo fornire il pacco gara.</li>
+        </ul>
+
         <ul class="accordian top-padding">
           <li>
-            <a class="toggle" href="javascript:void(0);">+ General conditions</a>
+            <a class="toggle" href="javascript:void(0);">+ Regolamento</a>
             <ul class="inner  top-padding">
               <li>1. Accident insurance for participants is arranged at Zavarovalnica Sava.</li>
               <li>2. Runners must stay on the official route. Each runner should be familiar with the official route and
@@ -157,7 +168,7 @@
             </ul>
           </li>
           <li>
-            <a class="toggle" href="javascript:void(0);">+ Contact</a>
+            <a class="toggle" href="javascript:void(0);">+ Contatti</a>
             <ul class="inner  top-padding">
               <li>Miha Repič</li>
               <li>+386 (0)68187250</li>
@@ -167,9 +178,9 @@
         </ul>
 
         <div class="center top-padding">
-          <a href="https://sportotime.com/eng/race/3579/race_registration" target="_blank" rel="noopener noreferrer"
-            class="btn">REGISTER NOW</a>
-          <p class="top-padding">Or check out other <a href="/en/races">races</a>.
+          <a href="https://sportotime.com/ita/la_gara/3580/iscrizione_alla_gara" target="_blank"
+            rel="noopener noreferrer" class="btn">ISCRIVITI</a>
+          <p class="top-padding">Guardare altre <a href="/it/gare">gare</a>.
           </p>
         </div>
       </div>
@@ -193,6 +204,7 @@
       <div>Go4trail | by <a href="https://teowinkler.com" target="_blank" rel="noopener noreferrer">Teo
           Winkler</a></div>
     </footer>
+
   </div>
 
   <!--Scripts-->
