--- a/it/gare/index.html
+++ b/it/gare/index.html
@@ -17,8 +17,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="keywords" content="trail, running, treh, vrhov, slovenija, sabotin, skabrijel, sveta gora">
   <meta name="description"
-    content="Tek treh vrhov 2020 | 12km, 28km, 58km | trail running over three summits surrounding the valley of Soča river in the Western Slovenia, 10th October 2020">
-  <title>Tek treh vrhov | Gare</title>
+    content="Go4trail 2021 | 12km, 28km, 58km | trail running over three summits surrounding the valley of Soča river in the Western Slovenia, 20. 11. 2021">
+  <title>Go4trail | Gare</title>
   <!--Styles-->
   <link rel="stylesheet" href="/styles/main.css">
   <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
@@ -31,7 +31,7 @@
   <!--Navigation bar-->
   <header id="navigation-bar">
     <div class="home-container">
-      <a href="/it" id="logo">T3V</a>
+      <a href="/it" id="logo">Go4trail</a>
     </div>
     <div class="menu-icon-container">
       <button class="menu-icon" data-target="menu">
@@ -61,7 +61,7 @@
     <!--Showcase image-->
     <section>
       <div class="showcase-image">
-        <img src="../../assets/images/showcase-11.jpg" alt="Tek treh vrhov - races" class="image-center">
+        <img src="../../assets/images/showcase-11.jpg" alt="Go4trail - races" class="image-center">
         <div class="text-wrap grid">
           <span class="showcase-title content-wrap">
             Gare
@@ -69,7 +69,6 @@
         </div>
       </div>
     </section>
-    <!--section-A-->
     <!--section-A-->
     <section class="section-a flex-item">
       <div class="content-wrap">
@@ -89,9 +88,9 @@
             </a>
           </li>
           <li id="race-2">
-            <a href="./go1v-12km">
+            <a href="./gotrim-12km">
               <div class="card-content">
-                <h1 class="card-title">Go1V</h1>
+                <h1 class="card-title">GOTRIM</h1>
                 <p> 12 km | 700 m
                 </p>
               </div>
@@ -100,16 +99,16 @@
           <li id="race-3">
             <a href="./go3v-28km">
               <div class="card-content">
-                <h1 class="card-title">Go3V</h1>
+                <h1 class="card-title">GO3V</h1>
                 <p> 28 km | 1675 m
                 </p>
               </div>
             </a>
           </li>
           <li id="race-4">
-            <a href="./ultra-58km">
+            <a href="./goultra-58km">
               <div class="card-content">
-                <h1 class="card-title">Počasna a drzna ultra</h1>
+                <h1 class="card-title">GfOULTRA</h1>
                 <p> 58 km | 2864 m
                 </p>
               </div>
@@ -134,14 +133,14 @@
 
     <!--Footer-->
     <footer id="main-footer" class="grid">
-      <div>Tek treh vrhov | by <a href="https://teowinkler.com" target="_blank" rel="noopener noreferrer">Teo
+      <div>Go4trail | by <a href="https://teowinkler.com" target="_blank" rel="noopener noreferrer">Teo
           Winkler</a></div>
     </footer>
   </div>
 
   <!--Scripts-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
-  <script type="text/javascript" src="/src/js/mainScript.js"></script>
+  <script type="text/javascript" src="/js/app.js"></script>
 </body>
 
 </html>
