--- a/sl/info.html
+++ b/sl/info.html
@@ -2,203 +2,198 @@
 <html lang="sl">
 
 <head>
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-157606098-2"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag() { dataLayer.push(arguments); }
-		gtag('js', new Date());
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157606098-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-		gtag('config', 'UA-157606098-2');
-	</script>
+    gtag('config', 'UA-157606098-2');
+  </script>
 
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<meta name="keywords" content="trail, tek, treh, vrhov, slovenija, sabotin, škabrijel, sveta gora">
-	<meta name="description"
-		content="Tek treh vrhov 2020 | 12km, 28km, 58km | tekaška preizkušnja med tremi vrhovi ob dolini reke Soče, 10. oktober 2020">
-	<title>Tek treh vrhov | Info</title>
-	<!--Styles-->
-	<link rel="stylesheet" href="/styles/main.css">
-	<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
-	<link href="https://fonts.googleapis.com/css?family=Roboto:300&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Martel+Sans:800&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="keywords" content="go4trail, trail, tek, treh, vrhov, slovenija, sabotin, škabrijel, sveta gora">
+  <meta name="description"
+    content="Go4trail 2021 | 12km, 28km, 58km | tekaška preizkušnja med tremi vrhovi ob dolini reke Soče, 20. 11. 2021">
+  <title>Go4trail | Info</title>
+  <!--Styles-->
+  <link rel="stylesheet" href="/styles/main.css">
+  <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Martel+Sans:800&display=swap" rel="stylesheet">
 </head>
 
 <body>
-	<!--Navigation bar-->
-	<header id="navigation-bar">
-		<div class="home-container">
-			<a href="/" id="logo">T3V</a>
-		</div>
-		<div class="menu-icon-container">
-			<button class="menu-icon" data-target="menu">
-				<i class="fas fa-bars" id="menu-button"></i>
-			</button>
-		</div>
-		<!--Menu content-->
-		<div id="menu">
-			<a id="close-button">&times;</a>
-			<ul class="menu-content">
-				<li><a href="info" class="menu-link">Info</a></li>
-				<li><a href="/sl/proge" class="menu-link" id="races-button">Proge</a></li>
-				<li><a href="https://sportotime.com/slv/dogodek/1171" target="_blank" rel="noopener noreferrer"
-						class="menu-link">Prijava</a></li>
-				<li><a href="o-nas" class="menu-link">O nas</a></li>
-				<li><a href="kontakt" class="menu-link">Kontakt</a></li>
-				<li>
-					<a href="/en/faq" class="language-switch menu-link">EN</a>
-					<span>/</span>					
-					<a href="/it/informazioni" class="language-switch menu-link">IT</a>
-				</li>
-			</ul>
-		</div>
-	</header>
+  <!--Navigation bar-->
+  <header id="navigation-bar">
+    <div class="home-container">
+      <a href="/" id="logo">Go4trail</a>
+    </div>
+    <div class="menu-icon-container">
+      <button class="menu-icon" data-target="menu">
+        <i class="fas fa-bars" id="menu-button"></i>
+      </button>
+    </div>
+    <!--Menu content-->
+    <div id="menu">
+      <a id="close-button">&times;</a>
+      <ul class="menu-content">
+        <li><a href="info" class="menu-link">Info</a></li>
+        <li><a href="/sl/proge" class="menu-link" id="races-button">Proge</a></li>
+        <li><a href="https://sportotime.com/slv/dogodek/1171" target="_blank" rel="noopener noreferrer"
+            class="menu-link">Prijava</a></li>
+        <li><a href="o-nas" class="menu-link">O nas</a></li>
+        <li><a href="kontakt" class="menu-link">Kontakt</a></li>
+        <li>
+          <a href="/en/faq" class="language-switch menu-link">EN</a>
+          <span>/</span>
+          <a href="/it/informazioni" class="language-switch menu-link">IT</a>
+        </li>
+      </ul>
+    </div>
+  </header>
 
-	<div class="flex-box">
-		<!--Showcase image-->
-		<section>
-			<div class="showcase-image">
-				<img src="../assets/images/showcase-3-m.jpg" 
-					srcset="../assets/images/showcase-3-m.jpg 650w,
-					../assets/images/showcase-3.jpg 750w"
-					sizes="100vw"
-					alt="Tek treh vrhov - Info"
-					class="image-center">
-				<div class="text-wrap grid">
-					<span class="showcase-title content-wrap">
-						Info
-					</span>
-				</div>
-			</div>
-		</section>
-		<!--section-D-->
-		<section class="section-d grid flex-item">
-			<div class="content-wrap">
-				<ul class="accordian top-padding">
-					<li>
-						<a class="toggle" href="javascript:void(0);">Kje je start?</a>
-						<ul class="inner  top-padding">
-							<li>
-								<p>Go1V, Go3V in Počasna a drzna ultra startajo v Kajak centru Solkan. Start Goriškega
-									teka je na Bevkovem trgu. </p>
-							</li>
-						</ul>
-					</li>
+  <div class="flex-box">
+    <!--Showcase image-->
+    <section>
+      <div class="showcase-image">
+        <img src="../assets/images/showcase-3-m.jpg" srcset="../assets/images/showcase-3-m.jpg 650w,
+					../assets/images/showcase-3.jpg 750w" sizes="100vw" alt="Go4trail - Info" class="image-center">
+        <div class="text-wrap grid">
+          <span class="showcase-title content-wrap">
+            Info
+          </span>
+        </div>
+      </div>
+    </section>
+    <!--section-D-->
+    <section class="section-d grid flex-item">
+      <div class="content-wrap">
+        <ul class="accordian top-padding">
+          <li>
+            <a class="toggle" href="javascript:void(0);">Kje je start?</a>
+            <ul class="inner  top-padding">
+              <li>
+                <p>GOTRIM, GO3V in GOULTRA startajo v Kajak centru Solkan. Start Goriškega
+                  teka je na Bevkovem trgu. </p>
+              </li>
+            </ul>
+          </li>
 
-					<li>
-						<a class="toggle" href="javascript:void(0);">Kdaj je start?</a>
-						<ul class="inner  top-padding">
-							<p>Goriški tek bo potekal 3. oktobra 2020 ob 10.00. Ostali teki (Go1V, Go3V in Počasna a
-								drzna ultra) se bodo odvijali 10. oktobra in sicer ob 7.00 (Počasna a drzna ultra),
-								ob 9.00 (Go3V) ter 9.30 (Go1V). </p>
-						</ul>
-					</li>
-					<li>
-						<a class="toggle" href="javascript:void(0);">Kje se lahko prijavim?</a>
-						<ul class="inner  top-padding">
-							<p> Prijavite se lahko <a href="https://sportotime.com/slv/dogodek/1171" target="_blank"
-									rel="noopener noreferrer">tukaj</a>. Višina prijavnine je odvisna od časovnega
-								obdobja v katerem se prijavite. Cene za različna obdobja so objavljene pod vsako progo
-								posebej.
-							</p>
-						</ul>
-					</li>
-					<li>
-						<a class="toggle" href="javascript:void(0);">V katero kategorijo spadam?</a>
-						<ul class="inner  top-padding">
-							<p> Tekmovalci in tekmovalke bodo razvrščeni po absolutni poziciji v moški in ženski
-								kategoriji. Prav tako bodo tekmovalci in tekmovalke razvrščeni v tri starostne
-								kategorije:
-								18 do 35 let (2002 - 1985), 36 do 50 let (1984 - 1970) in 51 let in več (1969 in prej).
-							</p>
-						</ul>
-					</li>
-					<li>
-						<a class="toggle" href="javascript:void(0);">Kje so rezultati tekov?</a>
-						<ul class="inner  top-padding">
-							<p> Rezultati tekov iz leta 2019 so dostopni na <a
-									href="https://www.sportotime.com/slv/dogodek/964" target="_blank"
-									rel="noopener noreferrer">sporttotime</a>.
-							</p>
-						</ul>
-					</li>
-					<li>
-						<a class="toggle" href="javascript:void(0);">Kdo organizira Tek treh vrhov?</a>
-						<ul class="inner  top-padding">
-							<p> Tek treh vrhov organizira <a href="https://www.sz-ng.si" target="_blank"
-									rel="noopener noreferrer">Javni zavod za šport Nova Gorica</a>, Bazoviška 4, 5000
-								Nova Gorica.
-							</p>
-						</ul>
-					</li>
-					<li>
-						<a class="toggle" href="javascript:void(0);">Splošni pogoji</a>
-						<ul class="inner  top-padding">
-							<li>1. Udeleženci so nezgodno zavarovani pri Zavarovalnici Sava.</li>
-							<li>2. Tekači morajo biti vso pot na uradni progi. Odgovornost vsakega tekača je, da pozna
-								potek proge in je seznanjen z uradnimi označbami (zemljevidi so dosegljivi na spletni
-								strani). Udeleženci, ki se oddaljijo od uradne proge ali jo namerno krajšajo bodo
-								avtomatično diskvalificirani.</li>
-							<li>3. Na nekaterih delih trasa poteka po cestah, na katerih morate upoštevati veljavne
-								cestno prometne predpise in se obnašati kot predpisuje zakon za vse udeležence v
-								prometu.</li>
-							<li>4. Samo tekačem s Startno številko na vidnem mestu bo omogočen dostop do okrepčevalnice.
-								Hrano in pijačo je treba pojesti in popiti na mestu okrepčevalnice.</li>
-							<li>5. Uporaba smučarskih palic je dovoljena vsem tekačem! (Rule 251 that replaces Rule 251
-								(Mountain Races) and Rule 252 (Trail Races) of the IAAF Competition Rules (NEW Rule
-								approved by the IAAF Council in force from 1 January 2019))</li>
-							<li>6. Na določenih točkah bodo člani GRS in drugih medicinskih služb, ki bodo v stalnem
-								kontaktu z vodstvom tekme. Vzdolž trase na najbolj izpostavljenih mestih bodo
-								prostovoljci, ki bodo preverjali prisotnost udeležencev.</li>
-							<li>7. Udeleženci morajo upoštevati osnovna načela obnašanja v naravi in ne smejo puščati
-								odpadkov! Odpadke lahko odložijo na mestih, predvidenih za to. Udeleženec, ki tega
-								pravila ne bo upošteval in ga kontrola pri tem opazi, bo avtomatsko diskvalificiran. Vsi
-								energijski geli, tablice,čokoladice morajo biti označene s startno številko tekmovalca.
-							</li>
-							<li>8. Tekmovanje se izvede v vseh vremenskih pogojih. Izjema so samo situacije, ko je lahko
-								ogrožena varnost udeležencev (izjemno neurje, naravna katastrofa itd.). V takem primeru
-								o odpovedi odloča vrhovna sodniška komisija. </li>
-							<li>9. Udeleženec se zaveda in se strinja, da je tovrstna aktivnost organizirana in vodena s
-								strani organizatorja in je opredeljena kot "ekstremen šport". Kot taka je podvržena
-								nevarnostim in tveganjem z vključujočimi poškodbami kot tudi smrti udeležencev.</li>
-							<li>10. Prostovoljna prijava na tekmo se razume kot strinjanje s pravili tekme in vseh
-								sprememb, ki jih mora organizator sproti po potrebi izvesti.</li>
-							<li>11. Zaradi izjemne zahtevnosti tekmovanja mlajši od 18 let ne morejo tekmovati na 28 in
-								58 km
-								razdalji.</li>
-						</ul>
-					</li>
-				</ul>
-			</div>
-		</section>
+          <li>
+            <a class="toggle" href="javascript:void(0);">Kdaj je start?</a>
+            <ul class="inner  top-padding">
+              <p>Goriški tek bo potekal 3. oktobra 2020 ob 10.00. Ostali teki (GOTRIM, GO3V in Počasna a
+                drzna ultra) se bodo odvijali 10. oktobra in sicer ob 7.00 (GOULTRA),
+                ob 9.00 (GO3V) ter 9.30 (GOTRIM). </p>
+            </ul>
+          </li>
+          <li>
+            <a class="toggle" href="javascript:void(0);">Kje se lahko prijavim?</a>
+            <ul class="inner  top-padding">
+              <p> Prijavite se lahko <a href="https://sportotime.com/slv/dogodek/1171" target="_blank"
+                  rel="noopener noreferrer">tukaj</a>. Višina prijavnine je odvisna od časovnega
+                obdobja v katerem se prijavite. Cene za različna obdobja so objavljene pod vsako progo
+                posebej.
+              </p>
+            </ul>
+          </li>
+          <li>
+            <a class="toggle" href="javascript:void(0);">V katero kategorijo spadam?</a>
+            <ul class="inner  top-padding">
+              <p> Tekmovalci in tekmovalke bodo razvrščeni po absolutni poziciji v moški in ženski
+                kategoriji. Prav tako bodo tekmovalci in tekmovalke razvrščeni v tri starostne
+                kategorije:
+                18 do 35 let (2002 - 1985), 36 do 50 let (1984 - 1970) in 51 let in več (1969 in prej).
+              </p>
+            </ul>
+          </li>
+          <li>
+            <a class="toggle" href="javascript:void(0);">Kje so rezultati tekov?</a>
+            <ul class="inner  top-padding">
+              <p> Rezultati tekov iz leta 2019 so dostopni na <a href="https://www.sportotime.com/slv/dogodek/964"
+                  target="_blank" rel="noopener noreferrer">sporttotime</a>.
+              </p>
+            </ul>
+          </li>
+          <li>
+            <a class="toggle" href="javascript:void(0);">Kdo organizira Go4trail?</a>
+            <ul class="inner  top-padding">
+              <p> Go4trail organizira <a href="https://www.sz-ng.si" target="_blank" rel="noopener noreferrer">Javni
+                  zavod za šport Nova Gorica</a>, Bazoviška 4, 5000
+                Nova Gorica.
+              </p>
+            </ul>
+          </li>
+          <li>
+            <a class="toggle" href="javascript:void(0);">Splošni pogoji</a>
+            <ul class="inner  top-padding">
+              <li>1. Udeleženci so nezgodno zavarovani pri Zavarovalnici Sava.</li>
+              <li>2. Tekači morajo biti vso pot na uradni progi. Odgovornost vsakega tekača je, da pozna
+                potek proge in je seznanjen z uradnimi označbami (zemljevidi so dosegljivi na spletni
+                strani). Udeleženci, ki se oddaljijo od uradne proge ali jo namerno krajšajo bodo
+                avtomatično diskvalificirani.</li>
+              <li>3. Na nekaterih delih trasa poteka po cestah, na katerih morate upoštevati veljavne
+                cestno prometne predpise in se obnašati kot predpisuje zakon za vse udeležence v
+                prometu.</li>
+              <li>4. Samo tekačem s Startno številko na vidnem mestu bo omogočen dostop do okrepčevalnice.
+                Hrano in pijačo je treba pojesti in popiti na mestu okrepčevalnice.</li>
+              <li>5. Uporaba smučarskih palic je dovoljena vsem tekačem! (Rule 251 that replaces Rule 251
+                (Mountain Races) and Rule 252 (Trail Races) of the IAAF Competition Rules (NEW Rule
+                approved by the IAAF Council in force from 1 January 2019))</li>
+              <li>6. Na določenih točkah bodo člani GRS in drugih medicinskih služb, ki bodo v stalnem
+                kontaktu z vodstvom tekme. Vzdolž trase na najbolj izpostavljenih mestih bodo
+                prostovoljci, ki bodo preverjali prisotnost udeležencev.</li>
+              <li>7. Udeleženci morajo upoštevati osnovna načela obnašanja v naravi in ne smejo puščati
+                odpadkov! Odpadke lahko odložijo na mestih, predvidenih za to. Udeleženec, ki tega
+                pravila ne bo upošteval in ga kontrola pri tem opazi, bo avtomatsko diskvalificiran. Vsi
+                energijski geli, tablice,čokoladice morajo biti označene s startno številko tekmovalca.
+              </li>
+              <li>8. Tekmovanje se izvede v vseh vremenskih pogojih. Izjema so samo situacije, ko je lahko
+                ogrožena varnost udeležencev (izjemno neurje, naravna katastrofa itd.). V takem primeru
+                o odpovedi odloča vrhovna sodniška komisija. </li>
+              <li>9. Udeleženec se zaveda in se strinja, da je tovrstna aktivnost organizirana in vodena s
+                strani organizatorja in je opredeljena kot "ekstremen šport". Kot taka je podvržena
+                nevarnostim in tveganjem z vključujočimi poškodbami kot tudi smrti udeležencev.</li>
+              <li>10. Prostovoljna prijava na tekmo se razume kot strinjanje s pravili tekme in vseh
+                sprememb, ki jih mora organizator sproti po potrebi izvesti.</li>
+              <li>11. Zaradi izjemne zahtevnosti tekmovanja mlajši od 18 let ne morejo tekmovati na 28 in
+                58 km
+                razdalji.</li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </section>
 
-		<!--section-C-->
-		<section class="section-c grid">
-			<div class="content-wrap">
-				<div class="icon-container">
-					<a href="https://www.instagram.com/go4trail/" target="_blank" rel="noopener noreferrer" class="icon"
-						data-target="menu">
-						<i class="fab fa-instagram"></i></a>
-					<a href="https://www.facebook.com/trail3v.eu/" target="_blank" class="icon" data-target="menu">
-						<i class="fab fa-facebook-square"></i></a>
-				</div>
-			</div>
+    <!--section-C-->
+    <section class="section-c grid">
+      <div class="content-wrap">
+        <div class="icon-container">
+          <a href="https://www.instagram.com/go4trail/" target="_blank" rel="noopener noreferrer" class="icon"
+            data-target="menu">
+            <i class="fab fa-instagram"></i></a>
+          <a href="https://www.facebook.com/trail3v.eu/" target="_blank" class="icon" data-target="menu">
+            <i class="fab fa-facebook-square"></i></a>
+        </div>
+      </div>
 
-		</section>
+    </section>
 
-		<!--Footer-->
-		<footer id="main-footer" class="grid">
-			<div>Tek treh vrhov | by <a href="https://teowinkler.com" target="_blank" rel="noopener noreferrer">Teo
-					Winkler</a></div>
-		</footer>
-	</div>
+    <!--Footer-->
+    <footer id="main-footer" class="grid">
+      <div>Go4trail | by <a href="https://teowinkler.com" target="_blank" rel="noopener noreferrer">Teo
+          Winkler</a></div>
+    </footer>
+  </div>
 
-	<!--Scripts-->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
-	<script type="text/javascript" src="/src/js/mainScript.js"></script>
+  <!--Scripts-->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
+  <script type="text/javascript" src="/js/app.js"></script>
 </body>
 
 </html>
