--- a/sl/proge/goultra-58km.html
+++ b/sl/proge/goultra-58km.html
@@ -17,8 +17,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="keywords" content="go4trail, trail, tek, treh, vrhov, slovenija, sabotin, škabrijel, sveta gora">
   <meta name="description"
-    content="Go4trail 2021 | 12km, 28km, 58km | tekaška preizkušnja med tremi vrhovi ob dolini reke Soče, 20. 11. 2021">
-  <title>Go4trail | GO3V 28km</title>
+    content="Go4trail 2021 | 12km, 28km, 58km | tekaška preizkušnja med tremi vrhovi ob dolini reke Soče, 20. 11. 2021
+  <title>Go4trail | GOULTRA 58km</title>
   <!--Styles-->
   <link rel="stylesheet" href="/styles/main.css">
   <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
@@ -31,7 +31,8 @@
   <!--Navigation bar-->
   <header id="navigation-bar">
     <div class="home-container">
-      <a href="/" id="logo">Go4trail</a> </div>
+      <a href="/" id="logo">Go4trail</a>
+    </div>
     <div class="menu-icon-container">
       <button class="menu-icon" data-target="menu">
         <i class="fas fa-bars" id="menu-button"></i>
@@ -48,23 +49,24 @@
         <li><a href="/sl/o-nas" class="menu-link">O nas</a></li>
         <li><a href="/sl/kontakt" class="menu-link">Kontakt</a></li>
         <li>
-          <a href="/en/races/go3v-28km" class="language-switch menu-link">EN</a>
+          <a href="/en/races/goultra-58km" class="language-switch menu-link">EN</a>
           <span>/</span>
-          <a href="/it/gare/go3v-28km" class="language-switch menu-link">IT</a>
+          <a href="/it/gare/goultra-58km" class="language-switch menu-link">IT</a>
         </li>
       </ul>
     </div>
   </header>
+
   <div class="flex-box">
     <!--Showcase image-->
     <section>
       <div class="showcase-image">
-        <img src="../../assets/images/showcase-10-m.jpg"
-          srcset="../../assets/images/showcase-10-m.jpg 650w, ../../assets/images/showcase-10.jpg 750w" sizes="100vw"
-          alt="Go4trail - GO3V 28km" class="image-center">
+        <img src="../../assets/images/showcase-12-m.jpg"
+          srcset="../../assets/images/showcase-12-m.jpg 650w, ../../assets/images/showcase-12.jpg 750w" sizes="100vw"
+          alt="Go4trail - GOULTRA 58 km" class="image-center">
         <div class="text-wrap grid">
           <span class="showcase-title content-wrap">
-            GO3V - 28 km
+            GOULTRA - 58 km
           </span>
         </div>
       </div>
@@ -72,26 +74,33 @@
     <!--section-D-->
     <section class="section-d grid flex-item">
       <div class="content-wrap">
-        <p class="opening">Proga za vsakega, ki si želi težjih izzivov. GO3V trail vas po ponesel čez vrh
-          Škabrijela, skozi
-          kaverno Svete Gore in z raftom čez Sočo do Sabotina.</p>
+        <p class="opening">Naša najtežja preizkušnja vas bo popeljala čez Škabrijel in Sveto Goro do Kanala, od
+          koder se boste
+          čez Korado in Sabotin vrnili v Solkan.</p>
 
         <ul class="info-container">
-          <li>Dolžina: <b>28 km</b></li>
-          <li>Vzpon: <b>1675 m</b></li>
+          <li>Dolžina: <b>58 km</b></li>
+          <li>Vzpon: <b>2864 m</b></li>
           <li>Okrepčevalnice: <b>6</b></li>
-          <li>Datum: <b>20. 11. 2021</b></li>
-          <li>Start: <b>9.00</b>, <i>Kajak center Solkan</i></li>
+          <li>Vodne postaje: <b>3</b></li>
+          <li>Datum: <b>20. 11. 2021</li>
+          <li>Start: <b>7.00</b>, <i>Kajak center Solkan</i></li>
         </ul>
 
         <p class="top-padding">
-          Prenesi <a href="/assets/gpx/GO3V_28km.gpx.zip">GPX 28 km</a>
+          Prenesi <a href="/assets/gpx/Ultra_58km.gpx.zip">GPX 58 km</a>
         </p>
 
         <h2>Časovne omejitve</h2>
         <ul class="equipment">
-          <li><b>13.00</b> Kajak Center Solkan (16km / 4 ure)</li>
-          <li><b>16.00</b> Cilj (7 ur)</li>
+          <li><b>13.30</b> Kanal (30km / 6 ur 30 minut)</li>
+          <li><b>17.00</b> Vrhovlje (45km / 10 ur) - zapre se greben Sabotina, tekmovalcem je omogočeno
+            nadaljevanje po »obvoznici«. V cilju so vsi tekmovalci, ki so uporabili »obvoznico«, uvrščeni za
+            tistimi, ki so še prečili čez greben Sabotina.</li>
+          <li><b>19.00</b> Cilj (58 km / 12 ur)</li>
+          <li class="small-text">* Organizator lahko v primeru slabega vremena in nevarnih razmer za
+            tekmovalce spelje celotno tekmo po »obvoznici« do Sabotina in se s tem izogni grebenu Sabotina.
+          </li>
         </ul>
 
         <h2>Obvezna oprema</h2>
@@ -103,7 +112,7 @@
           <li>5. Astro folija</li>
           <li>6. Prva pomoč</li>
           <li>7. Vetrna jakna</li>
-          <li>8. Čelna svetilka</li>
+          <li>8. Čelna svetilka z rezervnimi baterijami</li>
           <li class="small-text">* Morebitna dodatna oprema bo objavljena v dneh pred prireditvijo na naši
             Facebook strani.</li>
         </ul>
@@ -116,9 +125,9 @@
 
         <h2>Cena</h2>
         <ul class="price">
-          <li>do 1. julija 2020: <b>20 €</b></li>
-          <li>do 30. septembra 2020: <b>29 €</b></li>
-          <li>do dneva dogodka: <b>45 €</b></li>
+          <li>do 1. julija 2020: <b>40 €</b></li>
+          <li>do 30. septembra 2020: <b>49 €</b></li>
+          <li>do dneva dogodka: <b>65 €</b></li>
           <li class="small-text">* V primeru prostih mest je prijava na dan prireditve možna, vendar vam v tem
             primeru ne moremo zagotoviti darilnega paketa.</li>
         </ul>
@@ -128,8 +137,7 @@
             <a class="toggle" href="javascript:void(0);">+ Opis proge</a>
             <ul class="inner  top-padding">
               <li>
-                <p>Proga 28 km poteka preko treh vrhov nad Novo Gorico - Škabrijel, Sveta gora in
-                  Sabotin. <br><br> Start je v Kajak centru Solkan, od koder se proga nadaljuje po
+                <p>Start je v Kajak centru Solkan, od koder se proga nadaljuje po
                   pešpoti ob Soči pod železniški most. Po asfaltni poti se vzpnemo nato v Solkan.
                   Skozi center Solkana vodi pot mimo cerkve in pod solkansko obvoznico proti
                   Škabrijelu oz. sedlu vratca (okrepčevalnica). Po strelskih jarkih se vzpnemo na
@@ -139,21 +147,19 @@
                   planinsko/kolesarsko pot proti kaverni, kjer si nadanemo čelno svetilko in previdno
                   nadaljujemo skozi 280 metrov dolgo kaverno. Sledi vzpon po planinski poti na severni
                   strani do kipa sv. Frančiška in nadaljevanje po grebenu do bazilike na Sveti gori
-                  (okrepčevalnica). <br><br>Pot nadaljujemo mimo bazilike preko spusta po stopnicah na
-                  makadamsko parkirišče. Od tam zavijemo levo na kolesarsko »downhill« progo. Spust
-                  nadaljujemo po planski poti do gostilne Prevala (okrepčevalnica) in nato po asfaltni
-                  cesti v smeri Grgarja, nakar po 100 metrih skrenemo desno, kjer pridemo na
-                  kolesarsko »downhill« progo. Sledi spust, ki je v slabem vremenu lahko tudi spolzek
-                  in nevaren, zato previdnost ni odveč. Spustimo se do restavracije Žogica in
-                  nadaljujemo do Solkanskega mosta, kjer se spustimo desno pod kamniti železniški most
-                  ter nadaljujemo proti Kajak centru Solkan (okrepčevalnica). Pri okrepčevalnici se
-                  vkrcamo na raft, s katerim prečkamo reko Sočo. Po kratkem vzponu pridemo do
-                  kolesarske ceste in po 2 kilometrih zavijemo levo na markirano pot, ki vodi na
-                  Sabotin. Po slabem kilometru vzpenjanja zavijemo levo do Sv. Valentina
-                  (okrepčevalnica). Nadaljujemo po grebenu do vrha Sabotina (609 v.m), od koder sledi
-                  spust, ki nas pripelje preko Italije nazaj na cestni most čez Sočo v Solkanu. Iz
-                  Solkana se spustimo na pot ob Soči in nadaljujemo do cilja v Kajak centru Solkan.
-                </p> <br>
+                  (okrepčevalnica). <br><br> Od tam nadaljujemo po makadamski in planinski poti mimo
+                  spominskega obeležja Vodic do naselja Vodice. Po poti treh svetišč (vodna
+                  okrepčevalnica) nadaljujemo preko hriba Jelenk (782 v.m) do Kanalskega vrha
+                  (okrepčevalnica).<br><br> Sledi spust po markirani poti v Kanal (okrepčevalnica).
+                  Sledi vzpon po markirani planinski stezi iz vasi Gorenja vas na Korado (812 v.m;
+                  okrepčevalnica). Iz Korade nadaljujemo po označeni markirani planinski poti do
+                  Vrhovelj (okrepčevalnica). Od tam krenemo po markirani poti čez greben Sabotina (po
+                  10 urah tekme greben zaprt, označena »obvoznica«) do koče na Sabotinu
+                  (okrepčevalnica). Iz koče nadaljujemo po grebenu na vrh Sabotina (609 v.m).
+                  <br><br>SIedi spust preko Italije. Po makadamski poti pridemo do kolesarske ceste
+                  Solkan - Plave in priključka na državno cesto R 402, ki vodi v Brda. Preko
+                  solkanskega mostu se spustimo nazaj na obračališče v Solkanu ter zavijemo na cesto
+                  do pešpoti ob Soči vse do cilja v Kajak centru Solkan.</p><br>
                 <p class="small-text">* Zahtevnejši odseki so kamniti (Sabotin), blatni (spust s
                   Škabrijela), spolzki (kaverna Sveta gora, Sabotin).
                 </p>
@@ -193,8 +199,7 @@
               <li>10. Prostovoljna prijava na tekmo se razume kot strinjanje s pravili tekme in vseh
                 sprememb, ki jih mora organizator sproti po potrebi izvesti.</li>
               <li>11. Zaradi izjemne zahtevnosti tekmovanja mlajši od 18 let ne morejo tekmovati na 28 in
-                58 km
-                razdalji.</li>
+                58 km razdalji.</li>
             </ul>
           </li>
           <li>
@@ -202,13 +207,13 @@
             <ul class="inner  top-padding">
               <li>Miha Repič</li>
               <li>+386 (0)68187250</li>
-              <li><a href="mailto:mihamrr@gmail.com">mihamrr@gmail.com</a></li>
+              <li><a href="mailto:mihamrr@gmail.com ">mihamrr@gmail.com</a></li>
             </ul>
           </li>
         </ul>
 
         <div class="center top-padding">
-          <a href="https://sportotime.com/slv/dirka/3579/prijava_na_dirko" target="_blank" rel="noopener noreferrer"
+          <a href="https://sportotime.com/slv/dirka/3580/prijava_na_dirko" target="_blank" rel="noopener noreferrer"
             class="btn">PRIJAVITE SE</a>
           <p class="top-padding">Ali pa si oglejte še ostale <a href="/sl/proge">proge</a>.
           </p>
@@ -234,6 +239,7 @@
       <div>Go4trail | by <a href="https://teowinkler.com" target="_blank" rel="noopener noreferrer">Teo
           Winkler</a></div>
     </footer>
+
   </div>
 
   <!--Scripts-->
