--- a/sl/proge/index.html
+++ b/sl/proge/index.html
@@ -15,10 +15,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="keywords" content="trail, tek, treh, vrhov, slovenija, sabotin, škabrijel, sveta gora">
+  <meta name="keywords" content="go4trail, trail, tek, treh, vrhov, slovenija, sabotin, škabrijel, sveta gora">
   <meta name="description"
-    content="Tek treh vrhov 2020 | 12km, 28km, 58km | tekaška preizkušnja med tremi vrhovi ob dolini reke Soče, 10. oktober 2020">
-  <title>Tek treh vrhov | Proge</title>
+    content="Go4trail 2021 | 12km, 28km, 58km | tekaška preizkušnja med tremi vrhovi ob dolini reke Soče, 20. 11. 2021">
+  <title>Go4trail | Proge</title>
   <!--Styles-->
   <link rel="stylesheet" href="/styles/main.css">
   <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
@@ -31,7 +31,7 @@
   <!--Navigation bar-->
   <header id="navigation-bar">
     <div class="home-container">
-      <a href="/" id="logo">T3V</a>
+      <a href="/" id="logo">Go4trail</a>
     </div>
     <div class="menu-icon-container">
       <button class="menu-icon" data-target="menu">
@@ -61,7 +61,7 @@
     <!--Showcase image-->
     <section>
       <div class="showcase-image">
-        <img src="../../assets/images/showcase-11.jpg" alt="Tek treh vrhov - proge" class="image-center">
+        <img src="../../assets/images/showcase-11.jpg" alt="Go4trail - proge" class="image-center">
         <div class="text-wrap grid">
           <span class="showcase-title content-wrap">
             Proge
@@ -90,29 +90,26 @@
             </a>
           </li>
           <li id="race-2">
-            <a href="./go1v-12km">
+            <a href="./gotrim-12km">
               <div class="card-content">
-                <h1 class="card-title">Go1V</h1>
-                <p> 12 km | 700 m
-                </p>
+                <h1 class="card-title">GOTRIM</h1>
+                <p> 12 km | 700 m</p>
               </div>
             </a>
           </li>
           <li id="race-3">
             <a href="./go3v-28km">
               <div class="card-content">
-                <h1 class="card-title">Go3V</h1>
-                <p> 28 km | 1675 m
-                </p>
+                <h1 class="card-title">GO3V</h1>
+                <p> 28 km | 1675 m</p>
               </div>
             </a>
           </li>
           <li id="race-4">
-            <a href="./ultra-58km">
+            <a href="./goultra-58km">
               <div class="card-content">
-                <h1 class="card-title">Počasna a drzna ultra</h1>
-                <p> 58 km | 2864 m
-                </p>
+                <h1 class="card-title">GOULTRA</h1>
+                <p> 58 km | 2864 m</p>
               </div>
             </a>
           </li>
@@ -135,14 +132,14 @@
 
     <!--Footer-->
     <footer id="main-footer" class="grid">
-      <div>Tek treh vrhov | by <a href="https://teowinkler.com" target="_blank" rel="noopener noreferrer">Teo
+      <div>Go4trail | by <a href="https://teowinkler.com" target="_blank" rel="noopener noreferrer">Teo
           Winkler</a></div>
     </footer>
   </div>
 
   <!--Scripts-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
-  <script type="text/javascript" src="/src/js/mainScript.js"></script>
+  <script type="text/javascript" src="/js/app.js"></script>
 </body>
 
 </html>
