--- a/en/index.html
+++ b/en/index.html
@@ -17,8 +17,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="keywords" content="trail, running, treh, vrhov, slovenija, sabotin, skabrijel, sveta gora">
   <meta name="description"
-    content="Tek treh vrhov 2020 | 12km, 28km, 58km | trail running over three summits surrounding the valley of Soča river in the Western Slovenia, 10th October 2020">
-  <title>Tek treh vrhov 2020</title>
+    content="Go4trail 2021 | 12km, 28km, 58km | trail running over three summits surrounding the valley of Soča river in the Western Slovenia, 20. 11. 2021">
+  <title>Go4trail 2021</title>
 
   <!--Styles-->
   <link rel="stylesheet" href="/styles/main.css">
@@ -32,7 +32,7 @@
   <!--Navigation bar-->
   <header id="navigation-bar">
     <div class="home-container">
-      <a href="/" id="logo">T3V</a>
+      <a href="/" id="logo">Go4trail</a>
     </div>
     <div class="menu-icon-container">
       <button class="menu-icon" data-target="menu">
@@ -63,10 +63,10 @@
   <section id="showcase">
     <div class="hero-image">
       <img src="../assets/images/showcase-1-m.jpg" srcset="../assets/images/showcase-1-m.jpg 650w,
-				../assets/images/showcase-1.jpg 750w" sizes="100vw" alt="Tek treh vrhov - hero image">
+				../assets/images/showcase-1.jpg 750w" sizes="100vw" alt="Go4trail - hero image">
       <div class="text-wrap grid">
         <span class="big-headline content-wrap">
-          Tek treh vrhov
+          Go4trail
         </span>
       </div>
     </div>
@@ -79,7 +79,7 @@
     <div class="headline small-headline ">
       <div class="text-wrap">
         <span class="headline-text">
-          Tek treh vrhov
+          Go4trail
         </span>
       </div>
     </div>
@@ -100,9 +100,9 @@
       <div class="content-wrap">
         <ul class="image-grid">
           <li id="race-1">
-            <a href="./races/gorica-run">
+            <a href="./en/races/gorica-run">
               <div class="card-content">
-                <h1 class="card-title">Gorica run</h1>
+                <h1 class="card-title">Goriški tek</h1>
                 <p> 4, 10 in 15 km |
                   Charity run
                 </p>
@@ -110,27 +110,27 @@
             </a>
           </li>
           <li id="race-2">
-            <a href="./races/go1v-12km">
+            <a href="./en/races/gotrim-12km">
               <div class="card-content">
-                <h1 class="card-title">Go1V</h1>
+                <h1 class="card-title">GOTRIM</h1>
                 <p> 12 km | 700 m
                 </p>
               </div>
             </a>
           </li>
           <li id="race-3">
-            <a href="./races/go3v-28km">
+            <a href="./en/races/go3v-28km">
               <div class="card-content">
-                <h1 class="card-title">Go3V</h1>
+                <h1 class="card-title">GO3V</h1>
                 <p> 28 km | 1675 m
                 </p>
               </div>
             </a>
           </li>
           <li id="race-4">
-            <a href="./races/ultra-58km">
+            <a href="./en/races/goultra-58km">
               <div class="card-content">
-                <h1 class="card-title">Počasna a drzna ultra</h1>
+                <h1 class="card-title">GOULTRA</h1>
                 <p> 58 km | 2864 m
                 </p>
               </div>
@@ -163,13 +163,13 @@
 
   <!--Footer-->
   <footer id="main-footer" class="grid">
-    <div>Tek treh vrhov | by <a href="https://teowinkler.com" target="_blank" rel="noopener noreferrer">Teo
+    <div>Go4trail | by <a href="https://teowinkler.com" target="_blank" rel="noopener noreferrer">Teo
         Winkler</a></div>
   </footer>
 
   <!--Scripts-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
-  <script type="text/javascript" src="/src/js/mainScript.js"></script>
+  <script type="text/javascript" src="/js/app.js"></script>
 </body>
 
 </html>
