--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="keywords" content="trail, tek, treh, vrhov, slovenija, sabotin, škabrijel, sveta gora">
+  <meta name="keywords" content="go4trail, trail, tek, treh, vrhov, slovenija, sabotin, škabrijel, sveta gora">
   <meta name="description"
-    content="Tek treh vrhov 2020 | 12km, 28km, 58km | tekaška preizkušnja med tremi vrhovi ob dolini reke Soče, 10. oktober 2020">
-  <meta property="og:title" content="Tek treh vrhov" />
+    content="Go4trail 2021 | 12km, 28km, 58km | tekaška preizkušnja med tremi vrhovi ob dolini reke Soče, 20. 11. 2021">
+  <meta property="og:title" content="Go4trail" />
   <meta property="og:image" content="https://tektrehvrhov.si/assets/images/showcase-1-m.jpg" />
   <meta property="og:url" content="https://tektrehvrhov.si" />
-  <title>Tek treh vrhov 2020</title>
+  <title>Go4trail 2021</title>
   <!--Styles-->
   <link rel="stylesheet" href="styles/main.css">
   <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
@@ -34,7 +34,7 @@
   <!--Navigation bar-->
   <header id="navigation-bar">
     <div class="home-container">
-      <a href="/" id="logo">T3V</a>
+      <a href="/" id="logo">Go4trail</a>
     </div>
     <div class="menu-icon-container">
       <button class="menu-icon" data-target="menu">
@@ -65,10 +65,10 @@
   <section id="showcase">
     <div class="hero-image">
       <img src="./assets/images/showcase-1-m.jpg" srcset="./assets/images/showcase-1-m.jpg 650w,
-				./assets/images/showcase-1.jpg 750w" sizes="100vw" alt="Tek treh vrhov - hero image">
+				./assets/images/showcase-1.jpg 750w" sizes="100vw" alt="Go4trail - hero image">
       <div class="text-wrap grid">
         <span class="big-headline content-wrap">
-          Tek treh vrhov
+          Go4trail
         </span>
       </div>
 
@@ -81,7 +81,7 @@
     <div class="headline small-headline ">
       <div class="text-wrap">
         <span class="headline-text">
-          Tek treh vrhov
+          Go4trail
         </span>
       </div>
     </div>
@@ -105,36 +105,34 @@
             <a href="./sl/proge/goriski-tek">
               <div class="card-content">
                 <h1 class="card-title">Goriški tek</h1>
-                <p> 4, 10 in 15 km |
+                <p>
+                  4, 10 in 15 km |
                   Dobrodelni tek
                 </p>
               </div>
             </a>
           </li>
           <li id="race-2">
-            <a href="./sl/proge/go1v-12km">
+            <a href="./sl/proge/gotrim-12km">
               <div class="card-content">
-                <h1 class="card-title">Go1V</h1>
-                <p> 12 km | 700 m
-                </p>
+                <h1 class="card-title">GOTRIM</h1>
+                <p> 12 km | 700 m</p>
               </div>
             </a>
           </li>
           <li id="race-3">
             <a href="./sl/proge/go3v-28km">
               <div class="card-content">
-                <h1 class="card-title">Go3V</h1>
-                <p> 28 km | 1675 m
-                </p>
+                <h1 class="card-title">GO3V</h1>
+                <p> 28 km | 1675 m</p>
               </div>
             </a>
           </li>
           <li id="race-4">
-            <a href="./sl/proge/ultra-58km">
+            <a href="./sl/proge/goultra-58km">
               <div class="card-content">
-                <h1 class="card-title">Počasna a drzna ultra</h1>
-                <p> 58 km | 2864 m
-                </p>
+                <h1 class="card-title">GOULTRA</h1>
+                <p> 58 km | 2864 m</p>
               </div>
             </a>
           </li>
@@ -166,13 +164,13 @@
 
   <!--Footer-->
   <footer id="main-footer" class="grid">
-    <div>Tek treh vrhov | by <a href="https://teowinkler.com" target="_blank" rel="noopener noreferrer">Teo
+    <div>Go4trail | by <a href="https://teowinkler.com" target="_blank" rel="noopener noreferrer">Teo
         Winkler</a></div>
   </footer>
 
   <!--Scripts-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
-  <script type="text/javascript" src="/src/js/mainScript.js"></script>
+  <script type="text/javascript" src="/js/app.js"></script>
 </body>
 
 </html>
