--- a/it/chi-siamo.html
+++ b/it/chi-siamo.html
@@ -2,111 +2,113 @@
 <html lang="it">
 
 <head>
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-157606098-2"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag() { dataLayer.push(arguments); }
-		gtag('js', new Date());
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157606098-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-		gtag('config', 'UA-157606098-2');
-	</script>
+    gtag('config', 'UA-157606098-2');
+  </script>
 
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<meta name="keywords" content="trail, running, treh, vrhov, slovenija, sabotin, skabrijel, sveta gora">
-	<meta name="description"
-		content="Tek treh vrhov 2020 | 12km, 28km, 58km | trail running over three summits surrounding the valley of Soča river in the Western Slovenia, 10th October 2020">
-	<title>Tek treh vrhov | Chi siamo</title>
-	<!--Styles-->
-	<link rel="stylesheet" href="/styles/main.css">
-	<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
-	<link href="https://fonts.googleapis.com/css?family=Roboto:300&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Martel+Sans:800&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="keywords" content="trail, running, treh, vrhov, slovenija, sabotin, skabrijel, sveta gora">
+  <meta name="description"
+    content="Go4trail 2021 | 12km, 28km, 58km | trail running over three summits surrounding the valley of Soča river in the Western Slovenia, 20. 11. 2021">
+  <title>Go4trail | Chi siamo</title>
+  <!--Styles-->
+  <link rel="stylesheet" href="/styles/main.css">
+  <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Martel+Sans:800&display=swap" rel="stylesheet">
 
 </head>
 
 <body>
-	<!--Navigation bar-->
-	<header id="navigation-bar">
-		<div class="home-container">
-			<a href="/it" id="logo">T3V</a>
-		</div>
-		<div class="menu-icon-container">
-			<button class="menu-icon" data-target="menu">
-				<i class="fas fa-bars" id="menu-button"></i>
-			</button>
-		</div>
-		<!--Menu content-->
-		<div id="menu">
-			<a id="close-button">&times;</a>
-			<ul class="menu-content">
-				<li><a href="informazioni" class="menu-link">Info</a></li>
-				<li><a href="gare" class="menu-link" id="races-button">Gare</a></li>
-				<li><a href="https://sportotime.com/ita/evento/1171" target="_blank" rel="noopener noreferrer"
-						class="menu-link">Iscrizioni</a></li>
-				<li><a href="chi-siamo" class="menu-link">Chi siamo</a></li>
-				<li><a href="contatti" class="menu-link">Contatti</a></li>
-				<li>
-					<a href="/sl/o-nas" class="language-switch menu-link">SI</a>
-					<span>/</span>					
-					<a href="/en/about" class="language-switch menu-link">EN</a>
-				</li>
-			</ul>
-		</div>
-	</header>
+  <!--Navigation bar-->
+  <header id="navigation-bar">
+    <div class="home-container">
+      <a href="/it" id="logo">Go4trail</a>
+    </div>
+    <div class="menu-icon-container">
+      <button class="menu-icon" data-target="menu">
+        <i class="fas fa-bars" id="menu-button"></i>
+      </button>
+    </div>
+    <!--Menu content-->
+    <div id="menu">
+      <a id="close-button">&times;</a>
+      <ul class="menu-content">
+        <li><a href="informazioni" class="menu-link">Info</a></li>
+        <li><a href="gare" class="menu-link" id="races-button">Gare</a></li>
+        <li><a href="https://sportotime.com/ita/evento/1171" target="_blank" rel="noopener noreferrer"
+            class="menu-link">Iscrizioni</a></li>
+        <li><a href="chi-siamo" class="menu-link">Chi siamo</a></li>
+        <li><a href="contatti" class="menu-link">Contatti</a></li>
+        <li>
+          <a href="/sl/o-nas" class="language-switch menu-link">SI</a>
+          <span>/</span>
+          <a href="/en/about" class="language-switch menu-link">EN</a>
+        </li>
+      </ul>
+    </div>
+  </header>
 
-	<div class="flex-box">
-		<!--Showcase image-->
-		<section>
-			<div class="showcase-image">
-				<img src="../assets/images/showcase-9-m.jpg" 
-					srcset="../assets/images/showcase-9-m.jpg 650w,
-					../assets/images/showcase-9.jpg 750w"
-					sizes="100vw"
-					alt="Tek treh vrhov - Chi siamo us">
-				<div class="text-wrap grid">
-					<span class="showcase-title content-wrap">
-						Chi siamo
-					</span>
-				</div>
-			</div>
-		</section>
-		<!--section-D-->
-		<section class="section-d grid flex-item">
-			<div class="content-wrap">
-				<p class="main-text pt-1">La Corsa della tre cime (T3V) è iniziata, come tutte le cose belle, dalla condivisione di una passione comune di un gruppo di amici, uniti dalla gioia di correre lungo i sentieri del nostro territorio. Ecco perché abbiamo deciso di offrirti un'esperienza di corsa unica:
-					I percorsi sono stati disegnati lungo la cresta panoramica del Sabotino, dal quale potrai godere del verde smeraldo caratteristico dell’Isonzo-Soča, attraverso i sentieri forestali del monte San Gabriele e attraverso la galleria del Montesanto. Il nostro obiettivo è stato quello di catturare in pochi km tutta la varietà del nostro territorio ... e così è nata la Corsa delle tre cime.	
-				</p>
-			</div>
-		</section>
+  <div class="flex-box">
+    <!--Showcase image-->
+    <section>
+      <div class="showcase-image">
+        <img src="../assets/images/showcase-9-m.jpg" srcset="../assets/images/showcase-9-m.jpg 650w,
+					../assets/images/showcase-9.jpg 750w" sizes="100vw" alt="Go4trail - Chi siamo us">
+        <div class="text-wrap grid">
+          <span class="showcase-title content-wrap">
+            Chi siamo
+          </span>
+        </div>
+      </div>
+    </section>
+    <!--section-D-->
+    <section class="section-d grid flex-item">
+      <div class="content-wrap">
+        <p class="main-text pt-1">Go4trail è iniziata, come tutte le cose belle, dalla condivisione di una passione
+          comune di un gruppo di amici, uniti dalla gioia di correre lungo i sentieri del nostro territorio. Ecco perché
+          abbiamo deciso di offrirti un'esperienza di corsa unica:
+          I percorsi sono stati disegnati lungo la cresta panoramica del Sabotino, dal quale potrai godere del verde
+          smeraldo caratteristico dell’Isonzo-Soča, attraverso i sentieri forestali del monte San Gabriele e attraverso
+          la galleria del Montesanto. Il nostro obiettivo è stato quello di catturare in pochi km tutta la varietà del
+          nostro territorio ... e così è nata la Corsa delle tre cime.
+        </p>
+      </div>
+    </section>
 
-		<!--section-C-->
-		<section class="section-c" class="grid">
-			<div class="content-wrap">
-				<div class="icon-container">
-					<a href="https://www.instagram.com/go4trail/" target="_blank" rel="noopener noreferrer" class="icon"
-						data-target="menu">
-						<i class="fab fa-instagram"></i></a>
-					<a href="https://www.facebook.com/trail3v.eu/" target="_blank" class="icon" data-target="menu">
-						<i class="fab fa-facebook-square"></i></a>
-				</div>
-			</div>
+    <!--section-C-->
+    <section class="section-c" class="grid">
+      <div class="content-wrap">
+        <div class="icon-container">
+          <a href="https://www.instagram.com/go4trail/" target="_blank" rel="noopener noreferrer" class="icon"
+            data-target="menu">
+            <i class="fab fa-instagram"></i></a>
+          <a href="https://www.facebook.com/trail3v.eu/" target="_blank" class="icon" data-target="menu">
+            <i class="fab fa-facebook-square"></i></a>
+        </div>
+      </div>
 
-		</section>
+    </section>
 
-		<!--Footer-->
-		<footer id="main-footer" class="grid">
-			<div>Tek treh vrhov | by <a href="https://teowinkler.com" target="_blank" rel="noopener noreferrer">Teo
-					Winkler</a></div>
-		</footer>
-	</div>
+    <!--Footer-->
+    <footer id="main-footer" class="grid">
+      <div>Go4trail | by <a href="https://teowinkler.com" target="_blank" rel="noopener noreferrer">Teo
+          Winkler</a></div>
+    </footer>
+  </div>
 
-	<!--Scripts-->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
-	<script type="text/javascript" src="/src/js/mainScript.js"></script>
+  <!--Scripts-->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
+  <script type="text/javascript" src="/js/app.js"></script>
 </body>
 
 </html>
