--- a/it/gare/gotrim-12km.html
+++ b/it/gare/gotrim-12km.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -17,8 +17,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="keywords" content="trail, running, treh, vrhov, slovenija, sabotin, skabrijel, sveta gora">
   <meta name="description"
-    content="Go4trail 2021 | 12km, 28km, 58km | trail running over three summits surrounding the valley of Soča river in the Western Slovenia2020. 11. 2021
-  <title>Go4trail | GO3V 28km</title>
+    content="Go4trail 2021 | 12km, 28km, 58km | trail running over three summits surrounding the valley of Soča river in the Western Slovenia, 20. 11. 2021">
+  <title>Go4trail | GOTRIM 12km</title>
   <!--Styles-->
   <link rel="stylesheet" href="/styles/main.css">
   <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
@@ -31,42 +31,41 @@
   <!--Navigation bar-->
   <header id="navigation-bar">
     <div class="home-container">
-      <a href="/en" id="logo">Go4trail</a>
-    </div>
+      <a href="/it" id="logo">Go4trail</a> </div>
     <div class="menu-icon-container">
       <button class="menu-icon" data-target="menu">
         <i class="fas fa-bars" id="menu-button"></i>
       </button>
     </div>
-
-
     <!--Menu content-->
     <div id="menu">
       <a id="close-button">&times;</a>
       <ul class="menu-content">
-        <li><a href="/en/faq" class="menu-link">FAQ</a></li>
-        <li><a href="/en/races" class="menu-link" id="races-button">Races</a></li>
-        <li><a href="https://sportotime.com/eng/event/1171" target="_blank" rel="noopener noreferrer"
-            class="menu-link">Registration</a></li>
-        <li><a href="/en/about" class="menu-link">About</a></li>
-        <li><a href="/en/contact-us" class="menu-link">Contact</a></li>
+        <li><a href="/it/informazioni" class="menu-link">Info</a></li>
+        <li><a href="/it/gare" class="menu-link" id="races-button">Gare</a></li>
+        <li><a href="https://sportotime.com/ita/evento/1171" target="_blank" rel="noopener noreferrer"
+            class="menu-link">Iscrizioni</a></li>
+        <li><a href="/it/chi-siamo" class="menu-link">Chi siamo</a></li>
+        <li><a href="/it/contatti" class="menu-link">Contatti</a></li>
         <li>
-          <a href="/sl/proge/go3v-28km" class="language-switch menu-link">SI</a>
+          <a href="/sl/proge/gotrim-12km" class="language-switch menu-link">SI</a>
           <span>/</span>
-          <a href="/it/gare/go3v-28km" class="language-switch menu-link">IT</a>
+          <a href="/en/races/gotrim-12km" class="language-switch menu-link">EN</a>
         </li>
       </ul>
     </div>
   </header>
+
   <div class="flex-box">
     <!--Showcase image-->
     <section>
       <div class="showcase-image">
-        <img src="../../assets/images/showcase-10-m.jpg" srcset="../../assets/images/showcase-10-m.jpg 650w,
-				../../assets/images/showcase-10.jpg 750w" sizes="100vw" alt="Go4trail - GO3V 28km" class="image-center">
+        <img src="../../assets/images/showcase-7-m.jpg"
+          srcset="../../assets/images/showcase-7-m.jpg 650w, ../../assets/images/showcase-7.jpg 750w" sizes="100vw"
+          alt="Go4trail - GOTRIM 12km" class="image-center">
         <div class="text-wrap grid">
           <span class="showcase-title content-wrap">
-            GO3V - 28 km
+            GOTRIM - 12 km
           </span>
         </div>
       </div>
@@ -74,60 +73,43 @@
     <!--section-D-->
     <section class="section-d grid flex-item">
       <div class="content-wrap">
-        <p class="opening">A race for running enthusiasts looking for a challenge. GO3V trail will lead you over
-          the summit of Mt. Škabrijel and through the cavern of Sveta Gora. Finally, you will take a raft over
-          the Soča river and reach the ridge of Mt. Sabotin.</p>
-
+        <p class="opening">GOTRIM quest'anno si svolge sui sentieri del Montesanto </p>
         <ul class="info-container">
-          <li>Distance: <b>28 km</b></li>
-          <li>Elevation: <b>1675 m</b></li>
-          <li>Refreshment stations: <b>6</b></li>
-          <li>Date: <b>20. 11. 2021</b></li>
-          <li>Start: <b>9.00</b>, <i>Solkan Kayak Center</i></li>
+          <li>Distanza: <b>12 km</b></li>
+          <li>Dislivello: <b>700 m</b></li>
+          <li>Ristori <b>3</b></li>
+          <li>Data della gara: <b>20. 11. 2021</b></li>
+          <li>Partenza: <b>9.30</b>, <i>Centro Kayak Solkan (Salcano)
+            </i></li>
         </ul>
 
-        <p class="20. 11. 2021
-          Download <a href="/assets/gpx/GO3V_28km.gpx.zip">GPX 28 km</a>
+        <p class="top-padding">
+          Download <a href="/assets/gpx/GOTRIM_12km.gpx.zip">GPX 12 km</a>
         </p>
 
-        <h2>Time limit</h2>
+        <h2>Materiale obbligatorio</h2>
         <ul class="equipment">
-          <li><b>13.00</b> Solkan Kayak Center (16km / 4 hours)</li>
-          <li><b>16.00</b> Finish line (7 hours)</li>
-        </ul>
-
-        <h2>Obligatory equipment</h2>
-        <ul class="equipment">
-          <li>1. Race number (fully visible)</li>
-          <li>2. Water bottle (camel bag, bottle, soft flask etc.)</li>
-          <li>3. Eko cup (refreshment stations don't serve plastic cups)</li>
-          <li>4. Mobile phone (silent mode)</li>
-          <li>5. Emergency blanket</li>
-          <li>6. First aid kit</li>
-          <li>7. Wind jacket</li>
-          <li>8. Headlamp</li>
-          <li class="small-text">* Additional gear might be announced on our Facebook few days before the
-            event.</li>
-        </ul>
-
-        <h2>Recommended equipment</h2>
-        <ul class="equipment">
-          <li>1. Trekking poles</li>
-          <li>2. Energy gels (marked with runner's race number)</li>
-        </ul>
-
-        <h2>Entry fee</h2>
-        <ul class="price">
-          <li>until 1st July 2020: <b>20 €</b></li>
-          <li>until 30th September 2020: <b>29 €</b></li>
-          <li>until the day of the event: <b>45 €</b></li>
-          <li class="small-text">* If registrations are not filled up you can register on the day of the
-            event. In this case we cannot guarantee you will receive a gift pack.
+          <li>1. Pettorale (ben visibile)</li>
+          <li>2. Bicchiere o ecotazza</li>
+          <li>3. Telefono cellulare</li>
+          <li class="small-text">* Vi invitiamo a seguire la pagina <a href="https://www.facebook.com/trail3v.eu/"
+              target="_blank" rel="noopener noreferrer">Facebook</a> per gli aggiornamenti meteo prima della gara, in
+            quanto potrebbero essere fortemente consigliati pantaloni lunghi, giacca in goretex e guanti.
           </li>
         </ul>
+
+        <h2>Quote di iscrizione</h2>
+        <ul class="price">
+          <li>fino 1 luglio 2020: <b>15 €</b></li>
+          <li>fino 30th settembre 2020: <b>20 €</b></li>
+          <li>fino al giorno della gara: <b>25 €</b></li>
+          <li class="small-text">* In caso di posti liberi, sarà possibile registrarsi il giorno dell'evento, ma in
+            questo caso non possiamo fornire il pacco gara.</li>
+        </ul>
+
         <ul class="accordian top-padding">
           <li>
-            <a class="toggle" href="javascript:void(0);">+ General conditions</a>
+            <a class="toggle" href="javascript:void(0);">+ Regolamento</a>
             <ul class="inner  top-padding">
               <li>1. Accident insurance for participants is arranged at Zavarovalnica Sava.</li>
               <li>2. Runners must stay on the official route. Each runner should be familiar with the official route and
@@ -153,24 +135,14 @@
                 "extreme sport". As such it involves certain dangers and risks that may involve injuries and death.</li>
               <li>10. By voluntary enrolling the participants agrees with the rules of the race as well as any changes
                 that the organiser may carry out.</li>
-              <li>11. Runners younger than 18 years cannot register for the 28km and 58km races.</li>
-            </ul>
-          </li>
-          <li>
-            <a class="toggle" href="javascript:void(0);">+ Contact</a>
-            <ul class="inner  top-padding">
-              <li>Miha Repič</li>
-              <li>+386 (0)68187250</li>
-              <li><a href="mailto:mihamrr@gmail.com ">mihamrr@gmail.com</a></li>
             </ul>
           </li>
         </ul>
 
         <div class="center top-padding">
-          <a href="https://sportotime.com/eng/race/3579/race_registration" target="_blank" rel="noopener noreferrer"
-            class="btn">REGISTER NOW</a>
-          <p class="top-padding">Or check out other <a href="/en/races">races</a>.
-          </p>
+          <a href="https://sportotime.com/ita/la_gara/3578/iscrizione_alla_gara" target="_blank"
+            rel="noopener noreferrer" class="btn">ISCRIVITI</a>
+          <p class="top-padding">Guardare altre <a href="/it/gare">gare</a>.
         </div>
       </div>
     </section>
@@ -186,6 +158,7 @@
             <i class="fab fa-facebook-square"></i></a>
         </div>
       </div>
+
     </section>
 
     <!--Footer-->
