--- a/it/informazioni.html
+++ b/it/informazioni.html
@@ -17,8 +17,8 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<meta name="keywords" content="trail, running, treh, vrhov, slovenija, sabotin, skabrijel, sveta gora">
 	<meta name="description"
-		content="Tek treh vrhov 2020 | 12km, 28km, 58km | trail running over three summits surrounding the valley of Soča river in the Western Slovenia, 10th October 2020">
-	<title>Tek treh vrhov | Info</title>
+		content="Go4trail 2021 | 12km, 28km, 58km | trail running over three summits surrounding the valley of Soča river in the Western Slovenia, 20. 11. 2021">
+	<title>Go4trail | Info</title>
 	<!--Styles-->
 	<link rel="stylesheet" href="/styles/main.css">
 	<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
@@ -31,7 +31,7 @@
 	<!--Navigation bar-->
 	<header id="navigation-bar">
 		<div class="home-container">
-			<a href="/it" id="logo">T3V</a>
+			<a href="/it" id="logo">Go4trail</a>
 		</div>
 		<div class="menu-icon-container">
 			<button class="menu-icon" data-target="menu">
@@ -65,7 +65,7 @@
 					srcset="../assets/images/showcase-3-m.jpg 650w,
 					../assets/images/showcase-3.jpg 750w"
 					sizes="100vw"
-					alt="Tek treh vrhov - Info"
+					alt="Go4trail - Info"
 					class="image-center">
 				<div class="text-wrap grid">
 					<span class="showcase-title content-wrap">
@@ -82,7 +82,7 @@
 						<a class="toggle" href="javascript:void(0);">Dov'è la partenza? </a>
 						<ul class="inner  top-padding">
 							<li>
-								<p>Go1V, Go3V e Počasna a drzna ultra 58 km: partenza dal Centro Kayak di Solkan-Salcano, il 10.10.2020. 
+								<p>GOTRIM, GO3V e GOULTRA 58 km: partenza dal Centro Kayak di Solkan-Salcano, il 10.10.2020. 
 									Corsa Goriški tek: partenza da Bevkov Trg, nel centro di Nova Gorica, il 3.10.2020 </p>
 							</li>
 						</ul>
@@ -92,7 +92,7 @@
 						<a class="toggle" href="javascript:void(0);">Quando è la partenza?</a>
 						<ul class="inner  top-padding">
 							<p>3.10.2020 ore 10.00, partenza Goriški tek. <br>
-								10.10.2020 partenze: Go1V (ore 7.00), Go3V ore (9.00) e Počasna a drzna ultra 58 km (ore 9.00).
+								10.10.2020 partenze: GOTRIM (ore 7.00), GO3V ore (9.00) e GOULTRA 58 km (ore 9.00).
 							</p>
 						</ul>
 					</li>
@@ -165,14 +165,14 @@
 
 		<!--Footer-->
 		<footer id="main-footer" class="grid">
-			<div>Tek treh vrhov | by <a href="https://teowinkler.com" target="_blank" rel="noopener noreferrer">Teo
+			<div>Go4trail | by <a href="https://teowinkler.com" target="_blank" rel="noopener noreferrer">Teo
 					Winkler</a></div>
 		</footer>
 	</div>
 
 	<!--Scripts-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
-	<script type="text/javascript" src="/src/js/mainScript.js"></script>
+  <script type="text/javascript" src="/js/app.js"></script>
 </body>
 
 </html>
