--- a/sl/kontakt.html
+++ b/sl/kontakt.html
@@ -15,10 +15,10 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<meta name="keywords" content="trail, tek, treh, vrhov, slovenija, sabotin, škabrijel, sveta gora">
+	<meta name="keywords" content="go4trail, trail, tek, treh, vrhov, slovenija, sabotin, škabrijel, sveta gora">
 	<meta name="description"
-		content="Tek treh vrhov 2020 | 12km, 28km, 58km | tekaška preizkušnja med tremi vrhovi ob dolini reke Soče, 10. oktober 2020">
-	<title>Tek treh vrhov | Kontakt</title>
+		content="Go4trail 2021 | 12km, 28km, 58km | tekaška preizkušnja med tremi vrhovi ob dolini reke Soče, 20. 11. 2021">
+	<title>Go4trail | Kontakt</title>
 	<!--Styles-->
 	<link rel="stylesheet" href="/styles/main.css">
 	<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
@@ -31,7 +31,7 @@
 	<!--Navigation bar-->
 	<header id="navigation-bar">
 		<div class="home-container">
-			<a href="/" id="logo">T3V</a>
+			<a href="/" id="logo">Go4trail</a>
 		</div>
 		<div class="menu-icon-container">
 			<button class="menu-icon" data-target="menu">
@@ -65,7 +65,7 @@
 					srcset="../assets/images/showcase-4-m.jpg 650w,
 					../assets/images/showcase-4.jpg 750w"
 					sizes="100vw"
-					alt="Tek treh vrhov - Kontakt">
+					alt="Go4trail - Kontakt">
 				<div class="text-wrap grid">
 					<span class="showcase-title content-wrap">
 						Kontakt
@@ -96,7 +96,7 @@
 				<i class="fab fa-facebook-square"></i></a>
 		</div>
 		<footer id="main-footer" class="grid flex-footer">
-			<div>Tek treh vrhov | by <a href="https://teowinkler.com" target="_blank" rel="noopener noreferrer">Teo
+			<div>Go4trail | by <a href="https://teowinkler.com" target="_blank" rel="noopener noreferrer">Teo
 					Winkler</a></div>
 		</footer>
 	</div>
@@ -104,7 +104,7 @@
 	<!--Scripts-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
 	<script type="text/javascript" src="/src/js/jquery.validate.js"></script>
-	<script type="text/javascript" src="/src/js/mainScript.js"></script>
+  <script type="text/javascript" src="/js/app.js"></script>
 	<script type="text/javascript" src="/src/js/formValidation.js"></script>
 
 </body>
