--- a/sl/proge/gotrim-12km.html
+++ b/sl/proge/gotrim-12km.html
@@ -17,14 +17,15 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="keywords" content="go4trail, trail, tek, treh, vrhov, slovenija, sabotin, škabrijel, sveta gora">
   <meta name="description"
-    content="Go4trail 2021 | 12km, 28km, 58km | tekaška preizkušnja med tremi vrhovi ob dolini reke Soče, 20. 11. 2021">
-  <title>Go4trail | GO3V 28km</title>
+    content="Go4trail 2021 | 12km, 28km, 58km | tekaška preizkušnja med tremi vrhovi ob dolini reke Soče, 20. 11.1">1
+  <title>Go4trail | GOTRIM 12km</title>
   <!--Styles-->
   <link rel="stylesheet" href="/styles/main.css">
   <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Martel+Sans:800&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -48,23 +49,22 @@
         <li><a href="/sl/o-nas" class="menu-link">O nas</a></li>
         <li><a href="/sl/kontakt" class="menu-link">Kontakt</a></li>
         <li>
-          <a href="/en/races/go3v-28km" class="language-switch menu-link">EN</a>
+          <a href="/en/races/gotrim-12km" class="language-switch menu-link">EN</a>
           <span>/</span>
-          <a href="/it/gare/go3v-28km" class="language-switch menu-link">IT</a>
+          <a href="/it/gare/gotrim-12km" class="language-switch menu-link">IT</a>
         </li>
       </ul>
     </div>
   </header>
+
   <div class="flex-box">
     <!--Showcase image-->
     <section>
       <div class="showcase-image">
-        <img src="../../assets/images/showcase-10-m.jpg"
-          srcset="../../assets/images/showcase-10-m.jpg 650w, ../../assets/images/showcase-10.jpg 750w" sizes="100vw"
-          alt="Go4trail - GO3V 28km" class="image-center">
+        <img src="../../assets/images/showcase-7-m.jpg" srcset="../../assets/images/showcase-7-m.jpg 650w, ../../assets/images/showcase-7.jpg 750w" sizes="100vw" alt="Go4trail - GOTRIM 12km" class="image-center">
         <div class="text-wrap grid">
           <span class="showcase-title content-wrap">
-            GO3V - 28 km
+            GOTRIM - 12 km
           </span>
         </div>
       </div>
@@ -72,53 +72,34 @@
     <!--section-D-->
     <section class="section-d grid flex-item">
       <div class="content-wrap">
-        <p class="opening">Proga za vsakega, ki si želi težjih izzivov. GO3V trail vas po ponesel čez vrh
-          Škabrijela, skozi
-          kaverno Svete Gore in z raftom čez Sočo do Sabotina.</p>
+        <p class="opening">GOTRIM vas bo letos vodil na vrh Svete Gore.</p>
 
         <ul class="info-container">
-          <li>Dolžina: <b>28 km</b></li>
-          <li>Vzpon: <b>1675 m</b></li>
-          <li>Okrepčevalnice: <b>6</b></li>
-          <li>Datum: <b>20. 11. 2021</b></li>
-          <li>Start: <b>9.00</b>, <i>Kajak center Solkan</i></li>
+          <li>Dolžina: <b>12 km</b></li>
+          <li>Vzpon: <b>700 m</b></li>
+          <li>Okrepčevalnice: <b>3</b></li>
+          <li>Datum: <b>20. 11.1</b1</li>
+          <li>Start: <b>9.30</b>, <i>Kajak center Solkan</i></li>
         </ul>
 
         <p class="top-padding">
-          Prenesi <a href="/assets/gpx/GO3V_28km.gpx.zip">GPX 28 km</a>
+          Prenesi <a href="/assets/gpx/GOTRIM_12km.gpx.zip">GPX 12 km</a>
         </p>
-
-        <h2>Časovne omejitve</h2>
-        <ul class="equipment">
-          <li><b>13.00</b> Kajak Center Solkan (16km / 4 ure)</li>
-          <li><b>16.00</b> Cilj (7 ur)</li>
-        </ul>
 
         <h2>Obvezna oprema</h2>
         <ul class="equipment">
           <li>1. Startna številka (na vidnem mestu)</li>
           <li>2. Posoda za vodo (camel bag, bottle, soft flask itd.)</li>
-          <li>3. Eko lonček (na okrepčevalnicah ni plastičnih lončkov)</li>
-          <li>4. Mobilni telefon (utišan)</li>
-          <li>5. Astro folija</li>
-          <li>6. Prva pomoč</li>
-          <li>7. Vetrna jakna</li>
-          <li>8. Čelna svetilka</li>
+          <li>3. Mobilni telefon (utišan)</li>
           <li class="small-text">* Morebitna dodatna oprema bo objavljena v dneh pred prireditvijo na naši
             Facebook strani.</li>
         </ul>
 
-        <h2>Priporočljiva oprema</h2>
-        <ul class="equipment">
-          <li>1. Pohodne palice</li>
-          <li>2. Energijske tablice, geli (označeni s startno številko)</li>
-        </ul>
-
         <h2>Cena</h2>
         <ul class="price">
-          <li>do 1. julija 2020: <b>20 €</b></li>
-          <li>do 30. septembra 2020: <b>29 €</b></li>
-          <li>do dneva dogodka: <b>45 €</b></li>
+          <li>do 1. julija 2020: <b>15 €</b></li>
+          <li>do 30. septembra 2020: <b>20 €</b></li>
+          <li>do dneva dogodka: <b>25 €</b></li>
           <li class="small-text">* V primeru prostih mest je prijava na dan prireditve možna, vendar vam v tem
             primeru ne moremo zagotoviti darilnega paketa.</li>
         </ul>
@@ -128,35 +109,27 @@
             <a class="toggle" href="javascript:void(0);">+ Opis proge</a>
             <ul class="inner  top-padding">
               <li>
-                <p>Proga 28 km poteka preko treh vrhov nad Novo Gorico - Škabrijel, Sveta gora in
-                  Sabotin. <br><br> Start je v Kajak centru Solkan, od koder se proga nadaljuje po
-                  pešpoti ob Soči pod železniški most. Po asfaltni poti se vzpnemo nato v Solkan.
-                  Skozi center Solkana vodi pot mimo cerkve in pod solkansko obvoznico proti
-                  Škabrijelu oz. sedlu vratca (okrepčevalnica). Po strelskih jarkih se vzpnemo na
-                  Škabrijel (646 v.m). <br><br> Nadaljujemo po grebenu Škabrijela. Sledi spust do
-                  ceste Nova Gorica – Lokve (prevala). Po 300 metrih pot zavije pri gostilni Panorama
-                  (okrepčevalnica) desno za Sveto goro. Po 300 metrih asfaltne poti zavijemo na
-                  planinsko/kolesarsko pot proti kaverni, kjer si nadanemo čelno svetilko in previdno
-                  nadaljujemo skozi 280 metrov dolgo kaverno. Sledi vzpon po planinski poti na severni
-                  strani do kipa sv. Frančiška in nadaljevanje po grebenu do bazilike na Sveti gori
-                  (okrepčevalnica). <br><br>Pot nadaljujemo mimo bazilike preko spusta po stopnicah na
-                  makadamsko parkirišče. Od tam zavijemo levo na kolesarsko »downhill« progo. Spust
-                  nadaljujemo po planski poti do gostilne Prevala (okrepčevalnica) in nato po asfaltni
-                  cesti v smeri Grgarja, nakar po 100 metrih skrenemo desno, kjer pridemo na
-                  kolesarsko »downhill« progo. Sledi spust, ki je v slabem vremenu lahko tudi spolzek
-                  in nevaren, zato previdnost ni odveč. Spustimo se do restavracije Žogica in
-                  nadaljujemo do Solkanskega mosta, kjer se spustimo desno pod kamniti železniški most
-                  ter nadaljujemo proti Kajak centru Solkan (okrepčevalnica). Pri okrepčevalnici se
-                  vkrcamo na raft, s katerim prečkamo reko Sočo. Po kratkem vzponu pridemo do
-                  kolesarske ceste in po 2 kilometrih zavijemo levo na markirano pot, ki vodi na
-                  Sabotin. Po slabem kilometru vzpenjanja zavijemo levo do Sv. Valentina
-                  (okrepčevalnica). Nadaljujemo po grebenu do vrha Sabotina (609 v.m), od koder sledi
-                  spust, ki nas pripelje preko Italije nazaj na cestni most čez Sočo v Solkanu. Iz
-                  Solkana se spustimo na pot ob Soči in nadaljujemo do cilja v Kajak centru Solkan.
-                </p> <br>
-                <p class="small-text">* Zahtevnejši odseki so kamniti (Sabotin), blatni (spust s
-                  Škabrijela), spolzki (kaverna Sveta gora, Sabotin).
-                </p>
+                <p>Proga GOTRIM - 12 km nas letos popelje na Sv. Goro. Start je skupen s tekmovalci GO3V -
+                  28 km. <br><br>
+                  V Solkanu pod obvoznico se proga loči in gre levo ob obvoznici ter ob daljnovodu do
+                  Prevale. Od tam nadaljujemo po cesti do gostilne Panorama (okrepčevalnica), kjer
+                  zavijemo desno. Sledimo asfaltni poti za Sv. Goro (približno 300 m), nakar pri
+                  obeležju (lesen križ) zavijemo levo. Vzpenjamo se po kolesarski »downhill« progi vse
+                  do
+                  kaverne. Proga zaobide kaverno in nadaljuje nad njo v smeri Sv. Gore. Ob prihodu na
+                  asfaltno pot, ki pelje na Sv. Goro, le to prečimo in nadaljujemo po stopnicah do
+                  bazilike na Sv. Gori (okrepčevalnica). <br><br>
+                  Pot nadaljujemo mimo bazilike do spusta po stopnicah na makadamsko parkirišče. Od
+                  tod zavijemo levo na kolesarsko »downhill« progo. Ko spust po progi prečka
+                  planinsko pot, zavijemo desno po markirani planinski poti do obeležja (leseni križ).
+                  Od tod se držimo desno po kolesarski poti, nadaljujemo do gostilne Prevala
+                  (okrepčevalnica). Pot vodi po asfaltni cesti v smeri Grgarja (cca 100 m), nakar
+                  skrenemo desno, kjer ponovno pridemo na kolesarsko »downhill« progo. Sledi spust, ki
+                  je v slabem vremenu lahko tudi spolzek in nevaren, zato previdnost ni odveč.
+                  <br><br>
+                  Spustimo se do restavracije Žogica in nadaljujemo do Solkanskega mostu. Spustimo
+                  sedesno pod kamniti železniški most od koder nas proga vodi do cilja v Kajak centru
+                  Solkan.</p>
               </li>
             </ul>
           </li>
@@ -193,22 +166,14 @@
               <li>10. Prostovoljna prijava na tekmo se razume kot strinjanje s pravili tekme in vseh
                 sprememb, ki jih mora organizator sproti po potrebi izvesti.</li>
               <li>11. Zaradi izjemne zahtevnosti tekmovanja mlajši od 18 let ne morejo tekmovati na 28 in
-                58 km
-                razdalji.</li>
-            </ul>
-          </li>
-          <li>
-            <a class="toggle" href="javascript:void(0);">+ Kontakt</a>
-            <ul class="inner  top-padding">
-              <li>Miha Repič</li>
-              <li>+386 (0)68187250</li>
-              <li><a href="mailto:mihamrr@gmail.com">mihamrr@gmail.com</a></li>
+                58 km razdalji.</li>
+
             </ul>
           </li>
         </ul>
 
         <div class="center top-padding">
-          <a href="https://sportotime.com/slv/dirka/3579/prijava_na_dirko" target="_blank" rel="noopener noreferrer"
+          <a href="https://sportotime.com/slv/dirka/3578/prijava_na_dirko" target="_blank" rel="noopener noreferrer"
             class="btn">PRIJAVITE SE</a>
           <p class="top-padding">Ali pa si oglejte še ostale <a href="/sl/proge">proge</a>.
           </p>
@@ -227,6 +192,7 @@
             <i class="fab fa-facebook-square"></i></a>
         </div>
       </div>
+
     </section>
 
     <!--Footer-->
